Add home/away indicator to recent results

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
 <pre>
 USC WOMEN'S BASKETBALL
-Updated: 2026-02-01 11:42 AM PT
+Updated: 2026-02-01 11:43 AM PT
 ===============================================
 
 No game in progress today.
@@ -53,8 +53,8 @@ RECENT RESULTS
 -----------------------------------------------
 Jan 16   L 55-62 vs #16 MD
 Jan 18   W 83-57 vs PUR
-Jan 23   L 68-74 vs #13 MSU
-Jan 25   L 67-73 vs #9 MICH
+Jan 23   L 68-74 @ #13 MSU
+Jan 25   L 67-73 @ #9 MICH
 Jan 30   W 81-69 vs #8 IOWA
 </pre>
 </body>
