Use 'at' instead of '@' for away games

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
 <pre>
 USC WOMEN'S BASKETBALL
-Updated: 2026-02-01 11:43 AM PT
+Updated: 2026-02-01 11:44 AM PT
 ===============================================
 
 No game in progress today.
@@ -43,8 +43,8 @@ No game in progress today.
 UPCOMING SCHEDULE
 -----------------------------------------------
 Sun Feb 01 02:00PM PT  vs RUTG 
-Thu Feb 05 06:00PM PT  @ NU 
-Sun Feb 08 10:00AM PT  @ ILL 
+Thu Feb 05 06:00PM PT  at NU 
+Sun Feb 08 10:00AM PT  at ILL 
 Thu Feb 12 07:00PM PT  vs IU 
 Thu Feb 19 05:00PM PT  vs WIS 
 
@@ -53,8 +53,8 @@ RECENT RESULTS
 -----------------------------------------------
 Jan 16   L 55-62 vs #16 MD
 Jan 18   W 83-57 vs PUR
-Jan 23   L 68-74 @ #13 MSU
-Jan 25   L 67-73 @ #9 MICH
+Jan 23   L 68-74 at #13 MSU
+Jan 25   L 67-73 at #9 MICH
 Jan 30   W 81-69 vs #8 IOWA
 </pre>
 </body>
