Show full roster with steals and blocks

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
 <pre>
 USC WOMEN'S BASKETBALL
-Updated: 2026-02-01 12:01 PM PT
+Updated: 2026-02-01 12:03 PM PT
 ===============================================
 
 No game in progress today.
@@ -41,18 +41,21 @@ No game in progress today.
 ===============================================
 SEASON STATS
 -----------------------------------------------
-PLAYER                 PPG   RPG   APG
+PLAYER               PPG  RPG  APG  STL  BLK
 -----------------------------------------------
-#12 JuJu Watkins      25.5   7.0   3.4
-#9 Jazzy Davidson     16.2   6.2   4.1
-#25 Kara Dunn         13.6   4.8   1.5
-#3 Londynn Jones       9.9   1.4   1.6
-#11 Kennedy Smith      9.7   4.4   2.7
-#13 Dayana Mendes      5.9   4.3   1.2
-#0 Vivian Iwuchukwu    3.0   2.2   0.3
-#8 Gerda Raulusaityte   2.7   3.2   0.8
-#10 Malia Samuels      2.4   1.6   1.5
-#6 Laura Williams      2.4   2.9   0.4
+#12 JuJu Watkins    25.5  7.0  3.4  2.2  1.7
+#9 Jazzy Davidson   16.2  6.2  4.1  1.8  2.4
+#25 Kara Dunn       13.6  4.8  1.5  1.1  0.3
+#3 Londynn Jones     9.9  1.4  1.6  0.8  0.1
+#11 Kennedy Smith    9.7  4.4  2.7  2.1  0.8
+#13 Dayana Mendes    5.9  4.3  1.2  0.5  0.5
+#0 Vivian Iwuchukwu   3.0  2.2  0.3  0.3  0.1
+#8 Gerda Raulusaity   2.7  3.2  0.8  0.2  0.2
+#10 Malia Samuels    2.4  1.6  1.5  1.0  0.2
+#6 Laura Williams    2.4  2.9  0.4  0.2  1.2
+#7 Yakiya Milton     1.9  2.4  0.2  0.2  0.7
+#4 Rian Forestier    1.6  0.6  0.4  0.1  0.0
+#24 Brooklyn Shambli   0.4  0.4  0.4  0.2  0.0
 
 
 ===============================================
