Split schedule page into Results and Upcoming sections

--- a/schedule.html
+++ b/schedule.html
@@ -34,8 +34,10 @@
 <pre>
 USC WOMEN'S BASKETBALL
 Full Schedule/Results
-Updated: 2026-02-01 05:02 PM PT
+Updated: 2026-02-01 05:04 PM PT
 ===============================================
+RESULTS
+-----------------------------------------------
 Nov 04       W  87-48  vs NMSU
 Nov 09       W  69-68  at NCSU
 Nov 15       L  52-69  vs #3 SC
@@ -58,13 +60,16 @@ Jan 22       L  68-74  at #13 MSU
 Jan 25       L  67-73  at #9 MICH
 Jan 29       W  81-69  vs #8 IOWA
 Feb 01       W  71-39  vs RUTG
-Feb 05 06:00PM             at NU
-Feb 08 10:00AM             at ILL
-Feb 12 07:00PM             vs IU
-Feb 19 05:00PM             vs WIS
-Feb 21 09:00PM             at #11 OSU
-Feb 25 03:00PM             at PSU
-Mar 01 03:00PM             vs #2 UCLA
+
+UPCOMING SCHEDULE
+-----------------------------------------------
+Feb 05 06:00PM   at NU
+Feb 08 10:00AM   at ILL
+Feb 12 07:00PM   vs IU
+Feb 19 05:00PM   vs WIS
+Feb 21 09:00PM   at #11 OSU
+Feb 25 03:00PM   at PSU
+Mar 01 03:00PM   vs #2 UCLA
 
 <a href="index.html">Back to Home</a>
 </pre>
