Add alternating row background colors for player stats

--- a/games/401825023.html
+++ b/games/401825023.html
@@ -28,6 +28,14 @@
         a {
             color: #90caf9;
         }
+        .row-even {
+            background: #252525;
+            display: block;
+        }
+        .row-odd {
+            background: transparent;
+            display: block;
+        }
     </style>
 </head>
 <body>
@@ -57,63 +65,63 @@ Team Stats:
 
 USC Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Vivian Iwuchukwu F
-   17   0-1   0-0   0-0  2  1  1  0  0  1   0
-Jazzy Davidson G
-   38  6-15   2-8   0-0  8  3  4  3  8  2  14
-Kennedy Smith G
-   34  3-11   0-3   3-4  5  5  2  0  2  2   9
-Malia Samuels G
-   29   3-6   2-4   1-2  3  1  1  1  4  1   9
-Kara Dunn G
-   34  8-11   4-5   1-1  5  1  1  0  3  0  21
+<span class="row-even">Vivian Iwuchukwu F
+   17   0-1   0-0   0-0  2  1  1  0  0  1   0</span>
+<span class="row-odd">Jazzy Davidson G
+   38  6-15   2-8   0-0  8  3  4  3  8  2  14</span>
+<span class="row-even">Kennedy Smith G
+   34  3-11   0-3   3-4  5  5  2  0  2  2   9</span>
+<span class="row-odd">Malia Samuels G
+   29   3-6   2-4   1-2  3  1  1  1  4  1   9</span>
+<span class="row-even">Kara Dunn G
+   34  8-11   4-5   1-1  5  1  1  0  3  0  21</span>
 USC Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Gerda Raulusaityte F
-   18   1-1   0-0   0-0  3  0  0  0  0  2   2
-Dayana Mendes F
-   12   2-2   0-0   0-0  2  1  0  0  0  0   4
-Yakiya Milton F
-    5   0-0   0-0   0-0  2  0  0  0  1  0   0
-Londynn Jones G
-   13   0-3   0-0   0-0  0  2  1  0  3  2   0
-Laura Williams F
-  Did not play
-Brooklyn Shamblin G
-  Did not play
-Rian Forestier G
-  Did not play
-JuJu Watkins G
-  Did not play
+<span class="row-even">Gerda Raulusaityte F
+   18   1-1   0-0   0-0  3  0  0  0  0  2   2</span>
+<span class="row-odd">Dayana Mendes F
+   12   2-2   0-0   0-0  2  1  0  0  0  0   4</span>
+<span class="row-even">Yakiya Milton F
+    5   0-0   0-0   0-0  2  0  0  0  1  0   0</span>
+<span class="row-odd">Londynn Jones G
+   13   0-3   0-0   0-0  0  2  1  0  3  2   0</span>
+<span class="row-even">Laura Williams F
+  Did not play</span>
+<span class="row-odd">Brooklyn Shamblin G
+  Did not play</span>
+<span class="row-even">Rian Forestier G
+  Did not play</span>
+<span class="row-odd">JuJu Watkins G
+  Did not play</span>
 
 Notre Dame Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Gisela Sanchez F
-   23   2-8   1-4   0-0  4  0  1  0  1  0   5
-Hannah Hidalgo G
-   39  8-18   1-6   5-6  7  2  5  1  1  4  22
-Cassandre Prosper G
-   30  3-10   0-3   0-0  4  0  3  0  1  1   6
-Vanessa de Jesus G
-   38  5-10   3-7   0-0  1  4  2  0  2  2  13
-KK Bransford G
-   36   5-8   0-0   1-4  8  1  4  3  7  1  11
+<span class="row-even">Gisela Sanchez F
+   23   2-8   1-4   0-0  4  0  1  0  1  0   5</span>
+<span class="row-odd">Hannah Hidalgo G
+   39  8-18   1-6   5-6  7  2  5  1  1  4  22</span>
+<span class="row-even">Cassandre Prosper G
+   30  3-10   0-3   0-0  4  0  3  0  1  1   6</span>
+<span class="row-odd">Vanessa de Jesus G
+   38  5-10   3-7   0-0  1  4  2  0  2  2  13</span>
+<span class="row-even">KK Bransford G
+   36   5-8   0-0   1-4  8  1  4  3  7  1  11</span>
 Notre Dame Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Malaya Cowles F
-   19   1-2   0-0   0-0  6  1  0  2  2  2   2
-Iyana Moore G
-   15   1-4   0-1   0-0  2  2  1  0  2  0   2
-Leah Macy F
-  Did not play
-Bella Tehrani F
-  Did not play
-Jordyn Smith G
-  Did not play
-Luci Jensen G
-  Did not play
-Kelly Ratigan G
-  Did not play
+<span class="row-even">Malaya Cowles F
+   19   1-2   0-0   0-0  6  1  0  2  2  2   2</span>
+<span class="row-odd">Iyana Moore G
+   15   1-4   0-1   0-0  2  2  1  0  2  0   2</span>
+<span class="row-even">Leah Macy F
+  Did not play</span>
+<span class="row-odd">Bella Tehrani F
+  Did not play</span>
+<span class="row-even">Jordyn Smith G
+  Did not play</span>
+<span class="row-odd">Luci Jensen G
+  Did not play</span>
+<span class="row-even">Kelly Ratigan G
+  Did not play</span>
 
 <a href="../schedule.html">Back to Schedule</a>
 <a href="../index.html">Back to Home</a>
