--- a/games/401825236.html
+++ b/games/401825236.html
@@ -28,6 +28,14 @@
         a {
             color: #90caf9;
         }
+        .row-even {
+            background: #252525;
+            display: block;
+        }
+        .row-odd {
+            background: transparent;
+            display: block;
+        }
     </style>
 </head>
 <body>
@@ -57,67 +65,67 @@ Team Stats:
 
 USC Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Gerda Raulusaityte F
-   26   1-2   0-0   2-2  5  1  1  1  1  3   4
-Jazzy Davidson G
-   32  7-16   1-5   2-2  8  3  1  5  2  2  17
-Kennedy Smith G
-   35  8-12   1-3   0-0  9  6  1  2  6  4  17
-Kara Dunn G
-   28  6-13   1-5   1-2  5  0  2  0  0  4  14
-Londynn Jones G
-   31   4-8   3-5   2-2  0  1  3  0  4  2  13
+<span class="row-even">Gerda Raulusaityte F
+   26   1-2   0-0   2-2  5  1  1  1  1  3   4</span>
+<span class="row-odd">Jazzy Davidson G
+   32  7-16   1-5   2-2  8  3  1  5  2  2  17</span>
+<span class="row-even">Kennedy Smith G
+   35  8-12   1-3   0-0  9  6  1  2  6  4  17</span>
+<span class="row-odd">Kara Dunn G
+   28  6-13   1-5   1-2  5  0  2  0  0  4  14</span>
+<span class="row-even">Londynn Jones G
+   31   4-8   3-5   2-2  0  1  3  0  4  2  13</span>
 USC Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Dayana Mendes F
-    9   1-2   0-1   0-2  2  0  0  0  2  1   2
-Laura Williams F
-    9   0-1   0-0   0-2  4  1  0  0  0  2   0
-Vivian Iwuchukwu F
-    5   1-2   0-0   1-3  1  0  0  0  0  0   3
-Malia Samuels G
-   25   1-2   0-1   2-2  2  4  2  0  3  4   4
-Yakiya Milton F
-  Did not play
-Brooklyn Shamblin G
-  Did not play
-Rian Forestier G
-  Did not play
-JuJu Watkins G
-  Did not play
+<span class="row-even">Dayana Mendes F
+    9   1-2   0-1   0-2  2  0  0  0  2  1   2</span>
+<span class="row-odd">Laura Williams F
+    9   0-1   0-0   0-2  4  1  0  0  0  2   0</span>
+<span class="row-even">Vivian Iwuchukwu F
+    5   1-2   0-0   1-3  1  0  0  0  0  0   3</span>
+<span class="row-odd">Malia Samuels G
+   25   1-2   0-1   2-2  2  4  2  0  3  4   4</span>
+<span class="row-even">Yakiya Milton F
+  Did not play</span>
+<span class="row-odd">Brooklyn Shamblin G
+  Did not play</span>
+<span class="row-even">Rian Forestier G
+  Did not play</span>
+<span class="row-odd">JuJu Watkins G
+  Did not play</span>
 
 Nebraska Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Petra Bozan F
-   13   0-5   0-0   2-2  3  1  1  2  2  2   2
-Jessica Petrie F
-   23   4-9   0-2   0-0  2  0  1  0  2  1   8
-Britt Prince G
-   37   6-9   1-2   5-5  4  7  1  0  5  4  18
-Callin Hake G
-   31   2-3   0-1   4-4  1  2  1  0  2  1   8
-Hailey Weaver G
-   13   1-3   0-1   1-2  2  0  2  0  0  0   3
+<span class="row-even">Petra Bozan F
+   13   0-5   0-0   2-2  3  1  1  2  2  2   2</span>
+<span class="row-odd">Jessica Petrie F
+   23   4-9   0-2   0-0  2  0  1  0  2  1   8</span>
+<span class="row-even">Britt Prince G
+   37   6-9   1-2   5-5  4  7  1  0  5  4  18</span>
+<span class="row-odd">Callin Hake G
+   31   2-3   0-1   4-4  1  2  1  0  2  1   8</span>
+<span class="row-even">Hailey Weaver G
+   13   1-3   0-1   1-2  2  0  2  0  0  0   3</span>
 Nebraska Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Amiah Hargrove F
-   23   3-8   1-3   0-0  4  1  1  1  0  3   7
-Eliza Maupin F
-   20   2-8   0-1   6-6  4  0  1  0  2  3  10
-Claire Johnson G
-    3   0-0   0-0   0-0  0  0  0  0  0  0   0
-Kennadi Williams G
-    8   0-0   0-0   0-0  1  1  0  0  2  2   0
-Logan Nissley G
-   29   3-7   3-7   1-2  2  1  0  0  1  3  10
-Natalie Potts F
-  Did not play
-Alanna Neale G
-  Did not play
-Emily Fisher G
-  Did not play
-Allison Weidner G
-  Did not play
+<span class="row-even">Amiah Hargrove F
+   23   3-8   1-3   0-0  4  1  1  1  0  3   7</span>
+<span class="row-odd">Eliza Maupin F
+   20   2-8   0-1   6-6  4  0  1  0  2  3  10</span>
+<span class="row-even">Claire Johnson G
+    3   0-0   0-0   0-0  0  0  0  0  0  0   0</span>
+<span class="row-odd">Kennadi Williams G
+    8   0-0   0-0   0-0  1  1  0  0  2  2   0</span>
+<span class="row-even">Logan Nissley G
+   29   3-7   3-7   1-2  2  1  0  0  1  3  10</span>
+<span class="row-odd">Natalie Potts F
+  Did not play</span>
+<span class="row-even">Alanna Neale G
+  Did not play</span>
+<span class="row-odd">Emily Fisher G
+  Did not play</span>
+<span class="row-even">Allison Weidner G
+  Did not play</span>
 
 <a href="../schedule.html">Back to Schedule</a>
 <a href="../index.html">Back to Home</a>
