--- a/games/401825268.html
+++ b/games/401825268.html
@@ -28,6 +28,14 @@
         a {
             color: #90caf9;
         }
+        .row-even {
+            background: #252525;
+            display: block;
+        }
+        .row-odd {
+            background: transparent;
+            display: block;
+        }
     </style>
 </head>
 <body>
@@ -57,71 +65,71 @@ Team Stats:
 
 USC Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Gerda Raulusaityte F
-   26   0-2   0-0   0-0  5  2  0  0  0  2   0
-Jazzy Davidson G
-   40  7-14   5-9   2-2  8  4  1  2  3  4  21
-Malia Samuels G
-   29   2-3   2-3   0-0  2  6  1  1  0  4   6
-Kara Dunn G
-   39 10-17  5-10   2-3  1  3  6  0  4  1  27
-Londynn Jones G
-   31   2-8   1-6   0-0  1  2  0  0  1  4   5
+<span class="row-even">Gerda Raulusaityte F
+   26   0-2   0-0   0-0  5  2  0  0  0  2   0</span>
+<span class="row-odd">Jazzy Davidson G
+   40  7-14   5-9   2-2  8  4  1  2  3  4  21</span>
+<span class="row-even">Malia Samuels G
+   29   2-3   2-3   0-0  2  6  1  1  0  4   6</span>
+<span class="row-odd">Kara Dunn G
+   39 10-17  5-10   2-3  1  3  6  0  4  1  27</span>
+<span class="row-even">Londynn Jones G
+   31   2-8   1-6   0-0  1  2  0  0  1  4   5</span>
 USC Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Dayana Mendes F
-   21   1-6   1-3   0-0  5  1  0  0  3  1   3
-Laura Williams F
-    8   0-0   0-0   0-0  3  0  0  1  2  3   0
-Vivian Iwuchukwu F
-    6   0-0   0-0   0-0  1  0  0  0  2  2   0
-Sitaya Fagan F
-  Did not play
-Yakiya Milton F
-  Did not play
-Brooklyn Shamblin G
-  Did not play
-Kennedy Smith G
-  Did not play
-Rian Forestier G
-  Did not play
-JuJu Watkins G
-  Did not play
+<span class="row-even">Dayana Mendes F
+   21   1-6   1-3   0-0  5  1  0  0  3  1   3</span>
+<span class="row-odd">Laura Williams F
+    8   0-0   0-0   0-0  3  0  0  1  2  3   0</span>
+<span class="row-even">Vivian Iwuchukwu F
+    6   0-0   0-0   0-0  1  0  0  0  2  2   0</span>
+<span class="row-odd">Sitaya Fagan F
+  Did not play</span>
+<span class="row-even">Yakiya Milton F
+  Did not play</span>
+<span class="row-odd">Brooklyn Shamblin G
+  Did not play</span>
+<span class="row-even">Kennedy Smith G
+  Did not play</span>
+<span class="row-odd">Rian Forestier G
+  Did not play</span>
+<span class="row-even">JuJu Watkins G
+  Did not play</span>
 
 Minnesota Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Sophie Hart C
-   29  7-13   0-0   1-2  6  0  2  1  0  1  15
-Tori McKinney G
-   33  2-12   0-3   3-4  3  2  0  0  0  1   7
-Grace Grocholski G
-   39 10-20  5-10   0-2  8  1  3  0  2  2  25
-Mara Braun G
-   37   2-4   0-2   2-3 10  2  1  2  2  3   6
-Amaya Battle G
-   23   1-6   0-0   2-2  5  4  0  0  4  0   4
+<span class="row-even">Sophie Hart C
+   29  7-13   0-0   1-2  6  0  2  1  0  1  15</span>
+<span class="row-odd">Tori McKinney G
+   33  2-12   0-3   3-4  3  2  0  0  0  1   7</span>
+<span class="row-even">Grace Grocholski G
+   39 10-20  5-10   0-2  8  1  3  0  2  2  25</span>
+<span class="row-odd">Mara Braun G
+   37   2-4   0-2   2-3 10  2  1  2  2  3   6</span>
+<span class="row-even">Amaya Battle G
+   23   1-6   0-0   2-2  5  4  0  0  4  0   4</span>
 Minnesota Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Finau Tonga F
-   11   1-1   0-0   0-0  0  0  1  0  0  0   2
-Makena Christian G
-    2   0-0   0-0   0-0  0  0  1  0  0  0   0
-Brylee Glenn G
-   26   1-9   0-3   2-4  6  3  1  0  1  2   4
-Taylor Woodson F
-  Did not play
-Niamya Holloway F
-  Did not play
-Tracey Bershers F
-  Did not play
-Mallory Heyer F
-  Did not play
-Zoey Bershers C
-  Did not play
-Kennedy Klick G
-  Did not play
-Brynn Senden G
-  Did not play
+<span class="row-even">Finau Tonga F
+   11   1-1   0-0   0-0  0  0  1  0  0  0   2</span>
+<span class="row-odd">Makena Christian G
+    2   0-0   0-0   0-0  0  0  1  0  0  0   0</span>
+<span class="row-even">Brylee Glenn G
+   26   1-9   0-3   2-4  6  3  1  0  1  2   4</span>
+<span class="row-odd">Taylor Woodson F
+  Did not play</span>
+<span class="row-even">Niamya Holloway F
+  Did not play</span>
+<span class="row-odd">Tracey Bershers F
+  Did not play</span>
+<span class="row-even">Mallory Heyer F
+  Did not play</span>
+<span class="row-odd">Zoey Bershers C
+  Did not play</span>
+<span class="row-even">Kennedy Klick G
+  Did not play</span>
+<span class="row-odd">Brynn Senden G
+  Did not play</span>
 
 <a href="../schedule.html">Back to Schedule</a>
 <a href="../index.html">Back to Home</a>
