--- a/games/401825299.html
+++ b/games/401825299.html
@@ -28,6 +28,14 @@
         a {
             color: #90caf9;
         }
+        .row-even {
+            background: #252525;
+            display: block;
+        }
+        .row-odd {
+            background: transparent;
+            display: block;
+        }
     </style>
 </head>
 <body>
@@ -57,69 +65,69 @@ Team Stats:
 
 USC Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Vivian Iwuchukwu F
-    8   1-2   0-0   0-0  2  0  0  0  1  0   2
-Jazzy Davidson G
-   38  3-10   1-4   4-7  4  7  1  0  4  3  11
-Kennedy Smith G
-   33   2-7   1-3   0-0  2  4  3  0  8  4   5
-Malia Samuels G
-   18   2-4   0-2   0-0  1  0  1  0  1  1   4
-Kara Dunn G
-   35  9-15   3-7   5-5 10  3  2  0  5  4  26
+<span class="row-even">Vivian Iwuchukwu F
+    8   1-2   0-0   0-0  2  0  0  0  1  0   2</span>
+<span class="row-odd">Jazzy Davidson G
+   38  3-10   1-4   4-7  4  7  1  0  4  3  11</span>
+<span class="row-even">Kennedy Smith G
+   33   2-7   1-3   0-0  2  4  3  0  8  4   5</span>
+<span class="row-odd">Malia Samuels G
+   18   2-4   0-2   0-0  1  0  1  0  1  1   4</span>
+<span class="row-even">Kara Dunn G
+   35  9-15   3-7   5-5 10  3  2  0  5  4  26</span>
 USC Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Gerda Raulusaityte F
-   13   1-3   0-0   1-2  2  0  0  0  0  0   3
-Dayana Mendes F
-   12   1-3   0-2   0-0  1  1  0  1  0  0   2
-Laura Williams F
-   16   1-2   0-0   0-0  4  1  0  0  0  1   2
-Londynn Jones G
-   27  4-10   2-5   2-2  1  0  0  0  1  4  12
-Sitaya Fagan F
-  Did not play
-Yakiya Milton F
-  Did not play
-Brooklyn Shamblin G
-  Did not play
-Rian Forestier G
-  Did not play
-JuJu Watkins G
-  Did not play
+<span class="row-even">Gerda Raulusaityte F
+   13   1-3   0-0   1-2  2  0  0  0  0  0   3</span>
+<span class="row-odd">Dayana Mendes F
+   12   1-3   0-2   0-0  1  1  0  1  0  0   2</span>
+<span class="row-even">Laura Williams F
+   16   1-2   0-0   0-0  4  1  0  0  0  1   2</span>
+<span class="row-odd">Londynn Jones G
+   27  4-10   2-5   2-2  1  0  0  0  1  4  12</span>
+<span class="row-even">Sitaya Fagan F
+  Did not play</span>
+<span class="row-odd">Yakiya Milton F
+  Did not play</span>
+<span class="row-even">Brooklyn Shamblin G
+  Did not play</span>
+<span class="row-odd">Rian Forestier G
+  Did not play</span>
+<span class="row-even">JuJu Watkins G
+  Did not play</span>
 
 Michigan Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Ashley Sofilkanich F
-   22   5-8   0-0   0-1  3  0  0  1  1  3  10
-Syla Swords G
-   38  3-12   1-5   3-4  2  2  4  0  3  2  10
-Mila Holloway G
-   34   5-8   2-3   1-2  6  8  0  1  4  2  13
-Olivia Olson G
-   37 10-20   0-4   4-7  8  2  4  0  2  2  24
-Brooke Quarles Daniels G
-   35   4-7   0-0   2-2  7  4  2  0  2  4  10
+<span class="row-even">Ashley Sofilkanich F
+   22   5-8   0-0   0-1  3  0  0  1  1  3  10</span>
+<span class="row-odd">Syla Swords G
+   38  3-12   1-5   3-4  2  2  4  0  3  2  10</span>
+<span class="row-even">Mila Holloway G
+   34   5-8   2-3   1-2  6  8  0  1  4  2  13</span>
+<span class="row-odd">Olivia Olson G
+   37 10-20   0-4   4-7  8  2  4  0  2  2  24</span>
+<span class="row-even">Brooke Quarles Daniels G
+   35   4-7   0-0   2-2  7  4  2  0  2  4  10</span>
 Michigan Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-McKenzie Mathurin G
-    2   0-0   0-0   0-0  0  0  0  0  0  1   0
-Te'Yala Delfosse G
-   13   0-1   0-1   0-0  1  0  0  0  0  0   0
-Kendall Dudley G
-   18   3-6   0-0   0-0  2  2  1  1  0  3   6
-Macy Brown G
-    1   0-0   0-0   0-0  0  0  0  0  0  0   0
-Ciara Byars F
-  Did not play
-Jessica Fields F
-  Did not play
-Aaiyanna Dunbar F
-  Did not play
-Ally VanTimmeren F
-  Did not play
-Alyssa Crockett F
-  Did not play
+<span class="row-even">McKenzie Mathurin G
+    2   0-0   0-0   0-0  0  0  0  0  0  1   0</span>
+<span class="row-odd">Te'Yala Delfosse G
+   13   0-1   0-1   0-0  1  0  0  0  0  0   0</span>
+<span class="row-even">Kendall Dudley G
+   18   3-6   0-0   0-0  2  2  1  1  0  3   6</span>
+<span class="row-odd">Macy Brown G
+    1   0-0   0-0   0-0  0  0  0  0  0  0   0</span>
+<span class="row-even">Ciara Byars F
+  Did not play</span>
+<span class="row-odd">Jessica Fields F
+  Did not play</span>
+<span class="row-even">Aaiyanna Dunbar F
+  Did not play</span>
+<span class="row-odd">Ally VanTimmeren F
+  Did not play</span>
+<span class="row-even">Alyssa Crockett F
+  Did not play</span>
 
 <a href="../schedule.html">Back to Schedule</a>
 <a href="../index.html">Back to Home</a>
