--- a/games/401825306.html
+++ b/games/401825306.html
@@ -28,6 +28,14 @@
         a {
             color: #90caf9;
         }
+        .row-even {
+            background: #252525;
+            display: block;
+        }
+        .row-odd {
+            background: transparent;
+            display: block;
+        }
     </style>
 </head>
 <body>
@@ -57,69 +65,69 @@ Team Stats:
 
 USC Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Vivian Iwuchukwu F
-   18   1-3   0-0   1-1  4  0  0  0  0  3   3
-Jazzy Davidson G
-   36  8-17   3-8   2-4  4  8  2  1  1  4  21
-Kennedy Smith G
-   35  6-16   0-2   0-0  5  3  1  0  2  2  12
-Kara Dunn G
-   39  8-14   3-7   6-9 12  5  1  1  1  3  25
-Londynn Jones G
-   33  7-11   3-5   0-0  0  2  0  0  0  0  17
+<span class="row-even">Vivian Iwuchukwu F
+   18   1-3   0-0   1-1  4  0  0  0  0  3   3</span>
+<span class="row-odd">Jazzy Davidson G
+   36  8-17   3-8   2-4  4  8  2  1  1  4  21</span>
+<span class="row-even">Kennedy Smith G
+   35  6-16   0-2   0-0  5  3  1  0  2  2  12</span>
+<span class="row-odd">Kara Dunn G
+   39  8-14   3-7   6-9 12  5  1  1  1  3  25</span>
+<span class="row-even">Londynn Jones G
+   33  7-11   3-5   0-0  0  2  0  0  0  0  17</span>
 USC Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Gerda Raulusaityte F
-   20   0-1   0-0   0-0  3  2  0  0  1  3   0
-Dayana Mendes F
-   17   1-5   1-5   0-0  3  3  0  1  0  0   3
-Laura Williams F
-    2   0-1   0-0   0-0  0  0  0  1  0  0   0
-Sitaya Fagan F
-  Did not play
-Yakiya Milton F
-  Did not play
-Brooklyn Shamblin G
-  Did not play
-Rian Forestier G
-  Did not play
-JuJu Watkins G
-  Did not play
-Malia Samuels G
-  Did not play
+<span class="row-even">Gerda Raulusaityte F
+   20   0-1   0-0   0-0  3  2  0  0  1  3   0</span>
+<span class="row-odd">Dayana Mendes F
+   17   1-5   1-5   0-0  3  3  0  1  0  0   3</span>
+<span class="row-even">Laura Williams F
+    2   0-1   0-0   0-0  0  0  0  1  0  0   0</span>
+<span class="row-odd">Sitaya Fagan F
+  Did not play</span>
+<span class="row-even">Yakiya Milton F
+  Did not play</span>
+<span class="row-odd">Brooklyn Shamblin G
+  Did not play</span>
+<span class="row-even">Rian Forestier G
+  Did not play</span>
+<span class="row-odd">JuJu Watkins G
+  Did not play</span>
+<span class="row-even">Malia Samuels G
+  Did not play</span>
 
 Iowa Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Hannah Stuelke F
-   20   3-7   0-0   4-4  1  1  0  0  1  3  10
-Ava Heiden C
-   29  6-11   0-0   1-2  8  1  1  1  0  4  13
-Addie Deal G
-   17   0-2   0-0   0-0  3  1  0  0  3  1   0
-Chazadi Wright G
-   40  3-11   2-6   0-0  7  8  1  0  1  0   8
-Kylie Feuerbach G
-   26   2-7   2-4   0-0  2  1  0  0  3  2   6
+<span class="row-even">Hannah Stuelke F
+   20   3-7   0-0   4-4  1  1  0  0  1  3  10</span>
+<span class="row-odd">Ava Heiden C
+   29  6-11   0-0   1-2  8  1  1  1  0  4  13</span>
+<span class="row-even">Addie Deal G
+   17   0-2   0-0   0-0  3  1  0  0  3  1   0</span>
+<span class="row-odd">Chazadi Wright G
+   40  3-11   2-6   0-0  7  8  1  0  1  0   8</span>
+<span class="row-even">Kylie Feuerbach G
+   26   2-7   2-4   0-0  2  1  0  0  3  2   6</span>
 Iowa Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Layla Hays C
-    5   1-2   0-0   1-2  1  0  0  0  0  0   3
-Journey Houston G
-   26  7-12   0-0   2-2  8  2  0  0  1  0  16
-Teagan Mallegni G
-    7   0-4   0-2   0-0  3  1  0  0  0  0   0
-Callie Levin G
-    5   1-2   0-1   0-0  0  0  0  0  0  1   2
-Taylor Stremlow G
-   25   4-9   3-8   0-0  5  6  1  1  3  3  11
-Jada Gyamfi F
-  Did not play
-Emely Rodriguez G
-  Did not play
-Kennise Johnson G
-  Did not play
-Taylor McCabe G
-  Did not play
+<span class="row-even">Layla Hays C
+    5   1-2   0-0   1-2  1  0  0  0  0  0   3</span>
+<span class="row-odd">Journey Houston G
+   26  7-12   0-0   2-2  8  2  0  0  1  0  16</span>
+<span class="row-even">Teagan Mallegni G
+    7   0-4   0-2   0-0  3  1  0  0  0  0   0</span>
+<span class="row-odd">Callie Levin G
+    5   1-2   0-1   0-0  0  0  0  0  0  1   2</span>
+<span class="row-even">Taylor Stremlow G
+   25   4-9   3-8   0-0  5  6  1  1  3  3  11</span>
+<span class="row-odd">Jada Gyamfi F
+  Did not play</span>
+<span class="row-even">Emely Rodriguez G
+  Did not play</span>
+<span class="row-odd">Kennise Johnson G
+  Did not play</span>
+<span class="row-even">Taylor McCabe G
+  Did not play</span>
 
 <a href="../schedule.html">Back to Schedule</a>
 <a href="../index.html">Back to Home</a>
