--- a/games/401826675.html
+++ b/games/401826675.html
@@ -28,6 +28,14 @@
         a {
             color: #90caf9;
         }
+        .row-even {
+            background: #252525;
+            display: block;
+        }
+        .row-odd {
+            background: transparent;
+            display: block;
+        }
     </style>
 </head>
 <body>
@@ -57,71 +65,71 @@ Team Stats:
 
 USC Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Gerda Raulusaityte F
-   17   1-2   0-0   2-2  3  1  0  0  1  1   4
-Jazzy Davidson G
-   30  8-21   1-7   0-0  9  4  6  1  0  2  17
-Kennedy Smith G
-   26   1-8   0-7   0-1  6  5  2  0  2  2   2
-Malia Samuels G
-   18   3-5   0-1   0-0  3  7  2  0  0  1   6
-Kara Dunn G
-   26   4-9   3-7   1-2  3  4  0  0  0  2  12
+<span class="row-even">Gerda Raulusaityte F
+   17   1-2   0-0   2-2  3  1  0  0  1  1   4</span>
+<span class="row-odd">Jazzy Davidson G
+   30  8-21   1-7   0-0  9  4  6  1  0  2  17</span>
+<span class="row-even">Kennedy Smith G
+   26   1-8   0-7   0-1  6  5  2  0  2  2   2</span>
+<span class="row-odd">Malia Samuels G
+   18   3-5   0-1   0-0  3  7  2  0  0  1   6</span>
+<span class="row-even">Kara Dunn G
+   26   4-9   3-7   1-2  3  4  0  0  0  2  12</span>
 USC Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Dayana Mendes F
-   17   1-2   0-1   0-0  1  0  1  0  3  1   2
-Laura Williams F
-   12   4-5   0-0   0-0  5  0  0  3  1  1   8
-Vivian Iwuchukwu F
-    9   0-1   0-0   1-2  3  0  0  0  0  2   1
-Yakiya Milton F
-   10   1-2   0-0   4-6  8  0  0  4  0  0   6
-Brooklyn Shamblin G
-    3   0-1   0-0   0-0  0  0  0  0  0  0   0
-Rian Forestier G
-    9   0-6   0-5   0-0  0  0  0  0  0  0   0
-Londynn Jones G
-   23 11-16   5-8   1-1  2  0  4  1  0  1  28
-JuJu Watkins G
-  Did not play
+<span class="row-even">Dayana Mendes F
+   17   1-2   0-1   0-0  1  0  1  0  3  1   2</span>
+<span class="row-odd">Laura Williams F
+   12   4-5   0-0   0-0  5  0  0  3  1  1   8</span>
+<span class="row-even">Vivian Iwuchukwu F
+    9   0-1   0-0   1-2  3  0  0  0  0  2   1</span>
+<span class="row-odd">Yakiya Milton F
+   10   1-2   0-0   4-6  8  0  0  4  0  0   6</span>
+<span class="row-even">Brooklyn Shamblin G
+    3   0-1   0-0   0-0  0  0  0  0  0  0   0</span>
+<span class="row-odd">Rian Forestier G
+    9   0-6   0-5   0-0  0  0  0  0  0  0   0</span>
+<span class="row-even">Londynn Jones G
+   23 11-16   5-8   1-1  2  0  4  1  0  1  28</span>
+<span class="row-odd">JuJu Watkins G
+  Did not play</span>
 
 Cal Poly Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Nora Perez F
-   36  4-11   0-1   1-4  2  2  0  0  2  2   9
-Gabby Robinson G
-   26   1-2   0-1   0-0  2  0  0  0  3  1   2
-Alana Goosby G
-   28   1-2   0-0   0-0  2  7  0  0  4  1   2
-Jordan Billing G
-   10   0-2   0-2   0-0  2  1  0  0  1  1   0
-Madison Butcher G
-   34   3-5   3-5   2-2  7  1  2  0  1  1  11
+<span class="row-even">Nora Perez F
+   36  4-11   0-1   1-4  2  2  0  0  2  2   9</span>
+<span class="row-odd">Gabby Robinson G
+   26   1-2   0-1   0-0  2  0  0  0  3  1   2</span>
+<span class="row-even">Alana Goosby G
+   28   1-2   0-0   0-0  2  7  0  0  4  1   2</span>
+<span class="row-odd">Jordan Billing G
+   10   0-2   0-2   0-0  2  1  0  0  1  1   0</span>
+<span class="row-even">Madison Butcher G
+   34   3-5   3-5   2-2  7  1  2  0  1  1  11</span>
 Cal Poly Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Gillian Bears F
-    7   0-2   0-0   0-0  0  0  0  0  2  2   0
-Avery Knapp F
-   26  4-11   0-1   2-2  4  0  1  0  2  2  10
-Vivian Franklin G
-    7   0-2   0-2   0-0  0  0  0  0  1  2   0
-Katie Peiffer G
-   14   1-4   1-3   0-0  2  0  0  0  1  2   3
-Arissa Garcia G
-   12   0-3   0-0   2-4  2  1  0  0  5  3   2
-Charish Thompson F
-  Did not play
-Maya Sharvit F
-  Did not play
-Dulci Vail F
-  Did not play
-Ella Skrzyniarz G
-  Did not play
-Vanessa McManus G
-  Did not play
-Ana Moleon Hidalgo G
-  Did not play
+<span class="row-even">Gillian Bears F
+    7   0-2   0-0   0-0  0  0  0  0  2  2   0</span>
+<span class="row-odd">Avery Knapp F
+   26  4-11   0-1   2-2  4  0  1  0  2  2  10</span>
+<span class="row-even">Vivian Franklin G
+    7   0-2   0-2   0-0  0  0  0  0  1  2   0</span>
+<span class="row-odd">Katie Peiffer G
+   14   1-4   1-3   0-0  2  0  0  0  1  2   3</span>
+<span class="row-even">Arissa Garcia G
+   12   0-3   0-0   2-4  2  1  0  0  5  3   2</span>
+<span class="row-odd">Charish Thompson F
+  Did not play</span>
+<span class="row-even">Maya Sharvit F
+  Did not play</span>
+<span class="row-odd">Dulci Vail F
+  Did not play</span>
+<span class="row-even">Ella Skrzyniarz G
+  Did not play</span>
+<span class="row-odd">Vanessa McManus G
+  Did not play</span>
+<span class="row-even">Ana Moleon Hidalgo G
+  Did not play</span>
 
 <a href="../schedule.html">Back to Schedule</a>
 <a href="../index.html">Back to Home</a>
