--- a/games/401811126.html
+++ b/games/401811126.html
@@ -28,6 +28,14 @@
         a {
             color: #90caf9;
         }
+        .row-even {
+            background: #252525;
+            display: block;
+        }
+        .row-odd {
+            background: transparent;
+            display: block;
+        }
     </style>
 </head>
 <body>
@@ -57,61 +65,61 @@ Team Stats:
 
 USC Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Gerda Raulusaityte F
-    8   0-2   0-1   2-2  4  1  0  0  2  1   2
-Jazzy Davidson G
-   26  4-11   0-2   0-0  3  3  1  1  4  2   8
-Kennedy Smith G
-   31  5-14   0-2   2-2  1  4  2  3  1  0  12
-Malia Samuels G
-   28   3-7   0-0   0-0  3  1  0  1  3  2   6
-Kara Dunn G
-   35  4-12   1-4   1-1  5  1  1  0  1  1  10
+<span class="row-even">Gerda Raulusaityte F
+    8   0-2   0-1   2-2  4  1  0  0  2  1   2</span>
+<span class="row-odd">Jazzy Davidson G
+   26  4-11   0-2   0-0  3  3  1  1  4  2   8</span>
+<span class="row-even">Kennedy Smith G
+   31  5-14   0-2   2-2  1  4  2  3  1  0  12</span>
+<span class="row-odd">Malia Samuels G
+   28   3-7   0-0   0-0  3  1  0  1  3  2   6</span>
+<span class="row-even">Kara Dunn G
+   35  4-12   1-4   1-1  5  1  1  0  1  1  10</span>
 USC Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Dayana Mendes F
-   14   0-2   0-1   0-0  3  1  0  0  0  1   0
-Laura Williams F
-    7   1-4   0-0   1-2  4  0  0  1  0  2   3
-Vivian Iwuchukwu F
-   16   3-5   0-0   1-3  3  2  0  1  0  3   7
-Yakiya Milton F
-    6   0-0   0-0   0-0  0  0  0  0  0  0   0
-Londynn Jones G
-   29  2-10   0-4   0-0  2  2  1  0  1  1   4
-Brooklyn Shamblin G
-  Did not play
-Rian Forestier G
-  Did not play
-JuJu Watkins G
-  Did not play
+<span class="row-even">Dayana Mendes F
+   14   0-2   0-1   0-0  3  1  0  0  0  1   0</span>
+<span class="row-odd">Laura Williams F
+    7   1-4   0-0   1-2  4  0  0  1  0  2   3</span>
+<span class="row-even">Vivian Iwuchukwu F
+   16   3-5   0-0   1-3  3  2  0  1  0  3   7</span>
+<span class="row-odd">Yakiya Milton F
+    6   0-0   0-0   0-0  0  0  0  0  0  0   0</span>
+<span class="row-even">Londynn Jones G
+   29  2-10   0-4   0-0  2  2  1  0  1  1   4</span>
+<span class="row-odd">Brooklyn Shamblin G
+  Did not play</span>
+<span class="row-even">Rian Forestier G
+  Did not play</span>
+<span class="row-odd">JuJu Watkins G
+  Did not play</span>
 
 South Carolina Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Joyce Edwards F
-   35  7-16   0-0   3-8 10  4  2  2  6  3  17
-Madina Okot C
-   35   3-9   0-0   0-0 15  0  1  2  2  2   6
-Tessa Johnson G
-   37  4-11   2-4   4-4  4  5  1  0  3  2  14
-Ta'Niya Latson G
-   28  6-14   0-0   0-0  4  2  1  0  1  3  12
-Raven Johnson G
-   38  6-12   2-3   0-0 11  4  0  2  2  2  14
+<span class="row-even">Joyce Edwards F
+   35  7-16   0-0   3-8 10  4  2  2  6  3  17</span>
+<span class="row-odd">Madina Okot C
+   35   3-9   0-0   0-0 15  0  1  2  2  2   6</span>
+<span class="row-even">Tessa Johnson G
+   37  4-11   2-4   4-4  4  5  1  0  3  2  14</span>
+<span class="row-odd">Ta'Niya Latson G
+   28  6-14   0-0   0-0  4  2  1  0  1  3  12</span>
+<span class="row-even">Raven Johnson G
+   38  6-12   2-3   0-0 11  4  0  2  2  2  14</span>
 South Carolina Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Maryam Dauda F
-    7   1-2   0-0   0-0  3  0  1  1  1  1   2
-Agot Makeer G
-   17   2-6   0-2   0-0  4  1  1  0  2  1   4
-Ayla McDowell G
-    3   0-1   0-1   0-0  0  0  0  0  0  0   0
-Adhel Tac F
-  Did not play
-Chloe Kitts F
-  Did not play
-Maddy McDaniel G
-  Did not play
+<span class="row-even">Maryam Dauda F
+    7   1-2   0-0   0-0  3  0  1  1  1  1   2</span>
+<span class="row-odd">Agot Makeer G
+   17   2-6   0-2   0-0  4  1  1  0  2  1   4</span>
+<span class="row-even">Ayla McDowell G
+    3   0-1   0-1   0-0  0  0  0  0  0  0   0</span>
+<span class="row-odd">Adhel Tac F
+  Did not play</span>
+<span class="row-even">Chloe Kitts F
+  Did not play</span>
+<span class="row-odd">Maddy McDaniel G
+  Did not play</span>
 
 <a href="../schedule.html">Back to Schedule</a>
 <a href="../index.html">Back to Home</a>
