--- a/games/401817554.html
+++ b/games/401817554.html
@@ -28,6 +28,14 @@
         a {
             color: #90caf9;
         }
+        .row-even {
+            background: #252525;
+            display: block;
+        }
+        .row-odd {
+            background: transparent;
+            display: block;
+        }
     </style>
 </head>
 <body>
@@ -57,65 +65,65 @@ Team Stats:
 
 USC Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Gerda Raulusaityte F
-   17   1-2   0-0   0-0  6  1  0  0  3  5   2
-Jazzy Davidson G
-   38  9-21   3-6   3-3  4  2  2  4  4  2  24
-Kennedy Smith G
-   36  5-16   1-4   0-1  1  2  2  1  2  4  11
-Malia Samuels G
-   23   0-2   0-1   0-0  3  3  0  0  0  3   0
-Kara Dunn G
-   39  5-14   2-6   3-4  6  2  2  0  3  1  15
+<span class="row-even">Gerda Raulusaityte F
+   17   1-2   0-0   0-0  6  1  0  0  3  5   2</span>
+<span class="row-odd">Jazzy Davidson G
+   38  9-21   3-6   3-3  4  2  2  4  4  2  24</span>
+<span class="row-even">Kennedy Smith G
+   36  5-16   1-4   0-1  1  2  2  1  2  4  11</span>
+<span class="row-odd">Malia Samuels G
+   23   0-2   0-1   0-0  3  3  0  0  0  3   0</span>
+<span class="row-even">Kara Dunn G
+   39  5-14   2-6   3-4  6  2  2  0  3  1  15</span>
 USC Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Dayana Mendes F
-    4   0-1   0-0   0-0  1  0  0  0  0  0   0
-Laura Williams F
-   18   1-6   0-0   0-0  3  0  1  4  0  5   2
-Vivian Iwuchukwu F
-    4   0-0   0-0   0-0  2  0  0  0  0  0   0
-Londynn Jones G
-   21   2-4   1-2   2-4  1  1  1  0  2  4   7
-Yakiya Milton F
-  Did not play
-Brooklyn Shamblin G
-  Did not play
-Rian Forestier G
-  Did not play
-JuJu Watkins G
-  Did not play
+<span class="row-even">Dayana Mendes F
+    4   0-1   0-0   0-0  1  0  0  0  0  0   0</span>
+<span class="row-odd">Laura Williams F
+   18   1-6   0-0   0-0  3  0  1  4  0  5   2</span>
+<span class="row-even">Vivian Iwuchukwu F
+    4   0-0   0-0   0-0  2  0  0  0  0  0   0</span>
+<span class="row-odd">Londynn Jones G
+   21   2-4   1-2   2-4  1  1  1  0  2  4   7</span>
+<span class="row-even">Yakiya Milton F
+  Did not play</span>
+<span class="row-odd">Brooklyn Shamblin G
+  Did not play</span>
+<span class="row-even">Rian Forestier G
+  Did not play</span>
+<span class="row-odd">JuJu Watkins G
+  Did not play</span>
 
 California Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Taylor Barnes F
-   34   5-9   0-1   1-1  6  0  0  0  1  3  11
-Sakima Walker C
-   33  5-10   0-0   3-5 10  1  1  1  3  2  13
-Aliyahna Morris G
-   33   2-9   0-3   5-6  5  3  2  1  3  3   9
-Lulu Twidale G
-   37  3-11   1-5   4-8  3  1  2  0  4  3  11
-Mjracle Sheppard G
-   23   3-6   0-0   2-4  1  2  1  0  2  4   8
+<span class="row-even">Taylor Barnes F
+   34   5-9   0-1   1-1  6  0  0  0  1  3  11</span>
+<span class="row-odd">Sakima Walker C
+   33  5-10   0-0   3-5 10  1  1  1  3  2  13</span>
+<span class="row-even">Aliyahna Morris G
+   33   2-9   0-3   5-6  5  3  2  1  3  3   9</span>
+<span class="row-odd">Lulu Twidale G
+   37  3-11   1-5   4-8  3  1  2  0  4  3  11</span>
+<span class="row-even">Mjracle Sheppard G
+   23   3-6   0-0   2-4  1  2  1  0  2  4   8</span>
 California Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Naya Ojukwu F
-    7   0-2   0-0   0-0  2  0  1  2  1  1   0
-Lola Donez G
-    5   0-0   0-0   0-0  0  0  0  0  0  1   0
-Gisella Maul G
-   28   0-3   0-2   5-6  9  1  1  0  2  1   5
-Claudia Langarita F
-  Did not play
-Grace McCallop G
-  Did not play
-Isis Johnson-Musah G
-  Did not play
-Sofia Bowes G
-  Did not play
-Anastasia Drosouni G
-  Did not play
+<span class="row-even">Naya Ojukwu F
+    7   0-2   0-0   0-0  2  0  1  2  1  1   0</span>
+<span class="row-odd">Lola Donez G
+    5   0-0   0-0   0-0  0  0  0  0  0  1   0</span>
+<span class="row-even">Gisella Maul G
+   28   0-3   0-2   5-6  9  1  1  0  2  1   5</span>
+<span class="row-odd">Claudia Langarita F
+  Did not play</span>
+<span class="row-even">Grace McCallop G
+  Did not play</span>
+<span class="row-odd">Isis Johnson-Musah G
+  Did not play</span>
+<span class="row-even">Sofia Bowes G
+  Did not play</span>
+<span class="row-odd">Anastasia Drosouni G
+  Did not play</span>
 
 <a href="../schedule.html">Back to Schedule</a>
 <a href="../index.html">Back to Home</a>
