--- a/games/401817574.html
+++ b/games/401817574.html
@@ -28,6 +28,14 @@
         a {
             color: #90caf9;
         }
+        .row-even {
+            background: #252525;
+            display: block;
+        }
+        .row-odd {
+            background: transparent;
+            display: block;
+        }
     </style>
 </head>
 <body>
@@ -57,61 +65,61 @@ Team Stats:
 
 USC Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Gerda Raulusaityte F
-   23   2-3   0-0   1-2  2  0  1  0  0  1   5
-Jazzy Davidson G
-   34  8-23   3-9   2-2  4  4  3  5  1  2  21
-Kennedy Smith G
-   30  5-16   0-3   0-0  8  1  1  0  1  3  10
-Malia Samuels G
-   36   1-4   0-1   0-2  5  1  3  0  1  3   2
-Kara Dunn G
-   24   3-8   0-3   0-0  4  0  2  0  2  4   6
+<span class="row-even">Gerda Raulusaityte F
+   23   2-3   0-0   1-2  2  0  1  0  0  1   5</span>
+<span class="row-odd">Jazzy Davidson G
+   34  8-23   3-9   2-2  4  4  3  5  1  2  21</span>
+<span class="row-even">Kennedy Smith G
+   30  5-16   0-3   0-0  8  1  1  0  1  3  10</span>
+<span class="row-odd">Malia Samuels G
+   36   1-4   0-1   0-2  5  1  3  0  1  3   2</span>
+<span class="row-even">Kara Dunn G
+   24   3-8   0-3   0-0  4  0  2  0  2  4   6</span>
 USC Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Dayana Mendes F
-   10   1-4   0-1   0-0  1  1  0  0  0  0   2
-Laura Williams F
-    5   2-2   0-0   0-0  2  0  1  0  0  1   4
-Vivian Iwuchukwu F
-    7   0-2   0-0   0-0  3  0  0  0  0  2   0
-Yakiya Milton F
-    5   0-0   0-0   0-0  1  1  0  0  0  0   0
-Londynn Jones G
-   26  6-14   4-9   3-4  4  3  0  1  1  1  19
-Brooklyn Shamblin G
-  Did not play
-Rian Forestier G
-  Did not play
-JuJu Watkins G
-  Did not play
+<span class="row-even">Dayana Mendes F
+   10   1-4   0-1   0-0  1  1  0  0  0  0   2</span>
+<span class="row-odd">Laura Williams F
+    5   2-2   0-0   0-0  2  0  1  0  0  1   4</span>
+<span class="row-even">Vivian Iwuchukwu F
+    7   0-2   0-0   0-0  3  0  0  0  0  2   0</span>
+<span class="row-odd">Yakiya Milton F
+    5   0-0   0-0   0-0  1  1  0  0  0  0   0</span>
+<span class="row-even">Londynn Jones G
+   26  6-14   4-9   3-4  4  3  0  1  1  1  19</span>
+<span class="row-odd">Brooklyn Shamblin G
+  Did not play</span>
+<span class="row-even">Rian Forestier G
+  Did not play</span>
+<span class="row-odd">JuJu Watkins G
+  Did not play</span>
 
 NC State Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Tilda Trygger F
-   36   3-7   1-2   1-2 11  1  0  0  2  1   8
-Khamil Pierre F
-   36  4-16   0-0   2-2 18  2  1  0  3  0  10
-Zamareya Jones G
-   20   3-9   2-5   0-2  1  0  0  0  2  4   8
-Qadence Samuels G
-   29   4-8   1-4   0-0  3  0  0  1  2  3   9
-Zoe Brooks G
-   39 10-20   0-2   4-5 11  6  1  0  6  2  24
+<span class="row-even">Tilda Trygger F
+   36   3-7   1-2   1-2 11  1  0  0  2  1   8</span>
+<span class="row-odd">Khamil Pierre F
+   36  4-16   0-0   2-2 18  2  1  0  3  0  10</span>
+<span class="row-even">Zamareya Jones G
+   20   3-9   2-5   0-2  1  0  0  0  2  4   8</span>
+<span class="row-odd">Qadence Samuels G
+   29   4-8   1-4   0-0  3  0  0  1  2  3   9</span>
+<span class="row-even">Zoe Brooks G
+   39 10-20   0-2   4-5 11  6  1  0  6  2  24</span>
 NC State Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Maddie Cox F
-    8   0-2   0-2   0-0  0  0  0  0  0  0   0
-Destiny Lunan G
-    7   0-2   0-1   0-0  1  0  1  0  2  1   0
-Devyn Quigley G
-   25   4-7   1-3   0-0  4  2  0  0  1  2   9
-Lorena Awou C
-  Did not play
-Mallory Collier C
-  Did not play
-Adelaide Jernigan G
-  Did not play
+<span class="row-even">Maddie Cox F
+    8   0-2   0-2   0-0  0  0  0  0  0  0   0</span>
+<span class="row-odd">Destiny Lunan G
+    7   0-2   0-1   0-0  1  0  1  0  2  1   0</span>
+<span class="row-even">Devyn Quigley G
+   25   4-7   1-3   0-0  4  2  0  0  1  2   9</span>
+<span class="row-odd">Lorena Awou C
+  Did not play</span>
+<span class="row-even">Mallory Collier C
+  Did not play</span>
+<span class="row-odd">Adelaide Jernigan G
+  Did not play</span>
 
 <a href="../schedule.html">Back to Schedule</a>
 <a href="../index.html">Back to Home</a>
