--- a/games/401825227.html
+++ b/games/401825227.html
@@ -28,6 +28,14 @@
         a {
             color: #90caf9;
         }
+        .row-even {
+            background: #252525;
+            display: block;
+        }
+        .row-odd {
+            background: transparent;
+            display: block;
+        }
     </style>
 </head>
 <body>
@@ -57,67 +65,67 @@ Team Stats:
 
 USC Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Vivian Iwuchukwu F
-   12   0-1   0-0   0-0  4  0  0  0  0  1   0
-Jazzy Davidson G
-   38 10-21   2-7   0-2 12  4  0  2  4  2  22
-Kennedy Smith G
-   36  4-10   0-3   5-9  5  4  2  2  1  4  13
-Malia Samuels G
-   20   0-5   0-2   0-0  3  1  1  1  2  1   0
-Kara Dunn G
-   35  2-10   0-3   1-2  7  2  0  0  0  3   5
+<span class="row-even">Vivian Iwuchukwu F
+   12   0-1   0-0   0-0  4  0  0  0  0  1   0</span>
+<span class="row-odd">Jazzy Davidson G
+   38 10-21   2-7   0-2 12  4  0  2  4  2  22</span>
+<span class="row-even">Kennedy Smith G
+   36  4-10   0-3   5-9  5  4  2  2  1  4  13</span>
+<span class="row-odd">Malia Samuels G
+   20   0-5   0-2   0-0  3  1  1  1  2  1   0</span>
+<span class="row-even">Kara Dunn G
+   35  2-10   0-3   1-2  7  2  0  0  0  3   5</span>
 USC Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Gerda Raulusaityte F
-   26   2-2   0-0   4-6  8  0  0  0  2  2   8
-Dayana Mendes F
-    8   1-1   0-0   0-0  1  0  0  0  1  1   2
-Laura Williams F
-    2   1-4   0-0   1-2  3  0  0  1  0  0   3
-Londynn Jones G
-   23   3-6   0-2   0-0  1  3  1  0  3  2   6
-Yakiya Milton F
-  Did not play
-Brooklyn Shamblin G
-  Did not play
-Rian Forestier G
-  Did not play
-JuJu Watkins G
-  Did not play
+<span class="row-even">Gerda Raulusaityte F
+   26   2-2   0-0   4-6  8  0  0  0  2  2   8</span>
+<span class="row-odd">Dayana Mendes F
+    8   1-1   0-0   0-0  1  0  0  0  1  1   2</span>
+<span class="row-even">Laura Williams F
+    2   1-4   0-0   1-2  3  0  0  1  0  0   3</span>
+<span class="row-odd">Londynn Jones G
+   23   3-6   0-2   0-0  1  3  1  0  3  2   6</span>
+<span class="row-even">Yakiya Milton F
+  Did not play</span>
+<span class="row-odd">Brooklyn Shamblin G
+  Did not play</span>
+<span class="row-even">Rian Forestier G
+  Did not play</span>
+<span class="row-odd">JuJu Watkins G
+  Did not play</span>
 
 Washington Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Yulia Grabovskaia C
-   15   2-3   0-0   0-0  2  0  1  1  0  2   4
-Avery Howell G
-   38  5-14   3-9   3-4 13  2  2  0  2  4  16
-Sayvia Sellers G
-   36  7-23   3-7   3-3  2  2  1  0  4  5  20
-Elle Ladine G
-   22  0-10   0-5   0-0  2  1  0  1  0  3   0
-Hannah Stines G
-   33   2-6   0-1   0-0  3  4  0  1  0  2   4
+<span class="row-even">Yulia Grabovskaia C
+   15   2-3   0-0   0-0  2  0  1  1  0  2   4</span>
+<span class="row-odd">Avery Howell G
+   38  5-14   3-9   3-4 13  2  2  0  2  4  16</span>
+<span class="row-even">Sayvia Sellers G
+   36  7-23   3-7   3-3  2  2  1  0  4  5  20</span>
+<span class="row-odd">Elle Ladine G
+   22  0-10   0-5   0-0  2  1  0  1  0  3   0</span>
+<span class="row-even">Hannah Stines G
+   33   2-6   0-1   0-0  3  4  0  1  0  2   4</span>
 Washington Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Brynn McGaughy F
-   14   1-6   0-3   0-2  8  0  0  2  1  4   2
-Sienna Harvey G
-  Did not play
-Devin Coppinger G
-   20   0-3   0-0   0-1  2  1  2  0  1  1   0
-Chloe Briggs G
-  Did not play
-Teagan Brown G
-   22   1-2   0-0   2-2  3  0  3  0  2  0   4
-Nina Cain F
-  Did not play
-Daniella McLean F
-  Did not play
-Olivia Anderson F
-  Did not play
-Shayla Gillmer F
-  Did not play
+<span class="row-even">Brynn McGaughy F
+   14   1-6   0-3   0-2  8  0  0  2  1  4   2</span>
+<span class="row-odd">Sienna Harvey G
+  Did not play</span>
+<span class="row-even">Devin Coppinger G
+   20   0-3   0-0   0-1  2  1  2  0  1  1   0</span>
+<span class="row-odd">Chloe Briggs G
+  Did not play</span>
+<span class="row-even">Teagan Brown G
+   22   1-2   0-0   2-2  3  0  3  0  2  0   4</span>
+<span class="row-odd">Nina Cain F
+  Did not play</span>
+<span class="row-even">Daniella McLean F
+  Did not play</span>
+<span class="row-odd">Olivia Anderson F
+  Did not play</span>
+<span class="row-even">Shayla Gillmer F
+  Did not play</span>
 
 <a href="../schedule.html">Back to Schedule</a>
 <a href="../index.html">Back to Home</a>
