--- a/games/401825245.html
+++ b/games/401825245.html
@@ -28,6 +28,14 @@
         a {
             color: #90caf9;
         }
+        .row-even {
+            background: #252525;
+            display: block;
+        }
+        .row-odd {
+            background: transparent;
+            display: block;
+        }
     </style>
 </head>
 <body>
@@ -57,63 +65,63 @@ Team Stats:
 
 USC Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Gerda Raulusaityte F
-   12   1-5   0-0   0-0  2  0  0  0  1  1   2
-Jazzy Davidson G
-   32  4-15   2-6   0-0  2  1  0  3  1  3  10
-Kennedy Smith G
-   32  3-11   1-3   0-0  5  4  1  0  3  2   7
-Kara Dunn G
-   34  4-11   3-7   0-0  1  1  1  0  2  0  11
-Londynn Jones G
-   22   1-9   1-5   3-4  0  3  0  1  1  3   6
+<span class="row-even">Gerda Raulusaityte F
+   12   1-5   0-0   0-0  2  0  0  0  1  1   2</span>
+<span class="row-odd">Jazzy Davidson G
+   32  4-15   2-6   0-0  2  1  0  3  1  3  10</span>
+<span class="row-even">Kennedy Smith G
+   32  3-11   1-3   0-0  5  4  1  0  3  2   7</span>
+<span class="row-odd">Kara Dunn G
+   34  4-11   3-7   0-0  1  1  1  0  2  0  11</span>
+<span class="row-even">Londynn Jones G
+   22   1-9   1-5   3-4  0  3  0  1  1  3   6</span>
 USC Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Dayana Mendes F
-   11   0-3   0-2   0-0  3  0  1  0  2  0   0
-Laura Williams F
-   10   0-0   0-0   0-0  1  0  0  0  0  0   0
-Vivian Iwuchukwu F
-    8   0-2   0-0   0-0  2  0  1  0  0  1   0
-Yakiya Milton F
-   13   0-3   0-0   0-2  2  0  0  0  1  2   0
-Brooklyn Shamblin G
-    3   1-1   1-1   0-0  0  0  0  0  0  0   3
-Rian Forestier G
-    3   0-0   0-0   0-0  0  1  0  0  1  1   0
-Malia Samuels G
-   20   3-3   0-0   1-2  2  0  1  0  2  2   7
-JuJu Watkins G
-  Did not play
+<span class="row-even">Dayana Mendes F
+   11   0-3   0-2   0-0  3  0  1  0  2  0   0</span>
+<span class="row-odd">Laura Williams F
+   10   0-0   0-0   0-0  1  0  0  0  0  0   0</span>
+<span class="row-even">Vivian Iwuchukwu F
+    8   0-2   0-0   0-0  2  0  1  0  0  1   0</span>
+<span class="row-odd">Yakiya Milton F
+   13   0-3   0-0   0-2  2  0  0  0  1  2   0</span>
+<span class="row-even">Brooklyn Shamblin G
+    3   1-1   1-1   0-0  0  0  0  0  0  0   3</span>
+<span class="row-odd">Rian Forestier G
+    3   0-0   0-0   0-0  0  1  0  0  1  1   0</span>
+<span class="row-even">Malia Samuels G
+   20   3-3   0-0   1-2  2  0  1  0  2  2   7</span>
+<span class="row-odd">JuJu Watkins G
+  Did not play</span>
 
 UCLA Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Lauren Betts C
-   30  7-14   0-0   4-6 12  4  2  3  3  3  18
-Charlisse Leger-Walker G
-   22   3-6   2-3   0-0  5  3  1  1  5  1   8
-Gianna Kneepkens G
-   22   5-7   2-4   3-3  6  5  1  0  2  1  15
-Gabriela Jaquez G
-   34   3-9   0-2   6-6  6  1  0  0  2  2  12
-Kiki Rice G
-   31  7-11   0-1   0-0  2  9  0  1  0  0  14
+<span class="row-even">Lauren Betts C
+   30  7-14   0-0   4-6 12  4  2  3  3  3  18</span>
+<span class="row-odd">Charlisse Leger-Walker G
+   22   3-6   2-3   0-0  5  3  1  1  5  1   8</span>
+<span class="row-even">Gianna Kneepkens G
+   22   5-7   2-4   3-3  6  5  1  0  2  1  15</span>
+<span class="row-odd">Gabriela Jaquez G
+   34   3-9   0-2   6-6  6  1  0  0  2  2  12</span>
+<span class="row-even">Kiki Rice G
+   31  7-11   0-1   0-0  2  9  0  1  0  0  14</span>
 UCLA Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Sienna Betts F
-   16   1-2   0-0   0-0  5  0  4  0  4  1   2
-Amanda Muse F
-    8   0-1   0-0   1-2  3  0  0  1  1  0   1
-Angela Dugalić F
-   19   3-5   0-0   0-0  5  1  0  0  0  1   6
-Lena Bilić G
-   13   1-2   0-1   2-2  1  0  1  0  0  0   4
-Christina Karamouzi G
-    3   0-0   0-0   0-0  0  0  1  0  0  1   0
-Megan Grant G
-    2   0-0   0-0   0-0  0  1  0  0  0  0   0
-Timea Gardiner F
-  Did not play
+<span class="row-even">Sienna Betts F
+   16   1-2   0-0   0-0  5  0  4  0  4  1   2</span>
+<span class="row-odd">Amanda Muse F
+    8   0-1   0-0   1-2  3  0  0  1  1  0   1</span>
+<span class="row-even">Angela Dugalić F
+   19   3-5   0-0   0-0  5  1  0  0  0  1   6</span>
+<span class="row-odd">Lena Bilić G
+   13   1-2   0-1   2-2  1  0  1  0  0  0   4</span>
+<span class="row-even">Christina Karamouzi G
+    3   0-0   0-0   0-0  0  0  1  0  0  1   0</span>
+<span class="row-odd">Megan Grant G
+    2   0-0   0-0   0-0  0  1  0  0  0  0   0</span>
+<span class="row-even">Timea Gardiner F
+  Did not play</span>
 
 <a href="../schedule.html">Back to Schedule</a>
 <a href="../index.html">Back to Home</a>
