--- a/games/401825253.html
+++ b/games/401825253.html
@@ -28,6 +28,14 @@
         a {
             color: #90caf9;
         }
+        .row-even {
+            background: #252525;
+            display: block;
+        }
+        .row-odd {
+            background: transparent;
+            display: block;
+        }
     </style>
 </head>
 <body>
@@ -57,67 +65,67 @@ Team Stats:
 
 USC Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Gerda Raulusaityte F
-    9   0-1   0-0   0-0  2  0  0  0  1  1   0
-Jazzy Davidson G
-   39  5-20   2-8   2-2 13  5  2  2  3  2  14
-Malia Samuels G
-   39   2-9   1-2   1-2  3  4  2  0  2  4   6
-Kara Dunn G
-   40  7-18   2-8   5-5  9  4  1  0  2  2  21
-Londynn Jones G
-   33  5-13   2-7   1-1  5  3  1  0  4  3  13
+<span class="row-even">Gerda Raulusaityte F
+    9   0-1   0-0   0-0  2  0  0  0  1  1   0</span>
+<span class="row-odd">Jazzy Davidson G
+   39  5-20   2-8   2-2 13  5  2  2  3  2  14</span>
+<span class="row-even">Malia Samuels G
+   39   2-9   1-2   1-2  3  4  2  0  2  4   6</span>
+<span class="row-odd">Kara Dunn G
+   40  7-18   2-8   5-5  9  4  1  0  2  2  21</span>
+<span class="row-even">Londynn Jones G
+   33  5-13   2-7   1-1  5  3  1  0  4  3  13</span>
 USC Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Dayana Mendes F
-    8   1-1   1-1   0-0  0  0  0  0  1  1   3
-Laura Williams F
-   25   2-6   0-0   1-2  9  1  1  0  0  3   5
-Vivian Iwuchukwu F
-    7   1-1   0-0   2-2  1  0  0  0  0  1   4
-Yakiya Milton F
-  Did not play
-Brooklyn Shamblin G
-  Did not play
-Kennedy Smith G
-  Did not play
-Rian Forestier G
-  Did not play
-JuJu Watkins G
-  Did not play
+<span class="row-even">Dayana Mendes F
+    8   1-1   1-1   0-0  0  0  0  0  1  1   3</span>
+<span class="row-odd">Laura Williams F
+   25   2-6   0-0   1-2  9  1  1  0  0  3   5</span>
+<span class="row-even">Vivian Iwuchukwu F
+    7   1-1   0-0   2-2  1  0  0  0  0  1   4</span>
+<span class="row-odd">Yakiya Milton F
+  Did not play</span>
+<span class="row-even">Brooklyn Shamblin G
+  Did not play</span>
+<span class="row-odd">Kennedy Smith G
+  Did not play</span>
+<span class="row-even">Rian Forestier G
+  Did not play</span>
+<span class="row-odd">JuJu Watkins G
+  Did not play</span>
 
 Oregon Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Ehis Etute F
-   29  6-10   0-0   5-7 13  2  2  2  4  3  17
-Mia Jacobs F
-   27   4-9   3-6   0-0  3  5  1  2  1  3  11
-Katie Fiso G
-   35  6-12   0-0   2-2  8  6  1  1  2  2  14
-Ari Long G
-   23   4-9   3-6   0-0  5  2  2  0  0  1  11
-Sofia Bell G
-   36   3-9   2-7   0-0  1  2  1  0  0  2   8
+<span class="row-even">Ehis Etute F
+   29  6-10   0-0   5-7 13  2  2  2  4  3  17</span>
+<span class="row-odd">Mia Jacobs F
+   27   4-9   3-6   0-0  3  5  1  2  1  3  11</span>
+<span class="row-even">Katie Fiso G
+   35  6-12   0-0   2-2  8  6  1  1  2  2  14</span>
+<span class="row-odd">Ari Long G
+   23   4-9   3-6   0-0  5  2  2  0  0  1  11</span>
+<span class="row-even">Sofia Bell G
+   36   3-9   2-7   0-0  1  2  1  0  0  2   8</span>
 Oregon Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Sarah Rambus F
-   14   1-7   0-0   0-2  5  1  0  1  0  2   2
-Amina Muhammad F
-    9   0-2   0-0   0-0  5  0  0  0  1  0   0
-Avary Cain G
-   11   1-5   0-3   1-1  0  0  0  0  1  3   3
-Astera Tuhina G
-   16   2-2   1-1   0-0  0  2  0  0  2  0   5
-Filippa Tilliander F
-  Did not play
-Sara Barhoum G
-  Did not play
-Janiyah Williams G
-  Did not play
-Sammie Wagner G
-  Did not play
-Elisa Mevius G
-  Did not play
+<span class="row-even">Sarah Rambus F
+   14   1-7   0-0   0-2  5  1  0  1  0  2   2</span>
+<span class="row-odd">Amina Muhammad F
+    9   0-2   0-0   0-0  5  0  0  0  1  0   0</span>
+<span class="row-even">Avary Cain G
+   11   1-5   0-3   1-1  0  0  0  0  1  3   3</span>
+<span class="row-odd">Astera Tuhina G
+   16   2-2   1-1   0-0  0  2  0  0  2  0   5</span>
+<span class="row-even">Filippa Tilliander F
+  Did not play</span>
+<span class="row-odd">Sara Barhoum G
+  Did not play</span>
+<span class="row-even">Janiyah Williams G
+  Did not play</span>
+<span class="row-odd">Sammie Wagner G
+  Did not play</span>
+<span class="row-even">Elisa Mevius G
+  Did not play</span>
 
 <a href="../schedule.html">Back to Schedule</a>
 <a href="../index.html">Back to Home</a>
