--- a/games/401825274.html
+++ b/games/401825274.html
@@ -28,6 +28,14 @@
         a {
             color: #90caf9;
         }
+        .row-even {
+            background: #252525;
+            display: block;
+        }
+        .row-odd {
+            background: transparent;
+            display: block;
+        }
     </style>
 </head>
 <body>
@@ -57,71 +65,71 @@ Team Stats:
 
 USC Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Laura Williams F
-   13   2-3   0-0   0-0  1  0  0  0  0  2   4
-Jazzy Davidson G
-   37  5-23  1-11   1-1  5  5  3  1  2  4  12
-Malia Samuels G
-   39  1-11   0-4   0-0  5  1  1  2  2  2   2
-Kara Dunn G
-   34  7-16  4-12   3-4  5  5  1  0  0  2  21
-Londynn Jones G
-   30   1-8   0-4   5-6  3  0  0  1  2  5   7
+<span class="row-even">Laura Williams F
+   13   2-3   0-0   0-0  1  0  0  0  0  2   4</span>
+<span class="row-odd">Jazzy Davidson G
+   37  5-23  1-11   1-1  5  5  3  1  2  4  12</span>
+<span class="row-even">Malia Samuels G
+   39  1-11   0-4   0-0  5  1  1  2  2  2   2</span>
+<span class="row-odd">Kara Dunn G
+   34  7-16  4-12   3-4  5  5  1  0  0  2  21</span>
+<span class="row-even">Londynn Jones G
+   30   1-8   0-4   5-6  3  0  0  1  2  5   7</span>
 USC Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Gerda Raulusaityte F
-   12   1-1   0-0   0-0  0  1  0  0  1  0   2
-Dayana Mendes F
-   20   1-3   0-1   0-0  5  2  0  0  0  4   2
-Vivian Iwuchukwu F
-   15   1-2   0-0   3-4  5  0  1  0  2  3   5
-Sitaya Fagan F
-  Did not play
-Yakiya Milton F
-  Did not play
-Brooklyn Shamblin G
-  Did not play
-Kennedy Smith G
-  Did not play
-Rian Forestier G
-  Did not play
-JuJu Watkins G
-  Did not play
+<span class="row-even">Gerda Raulusaityte F
+   12   1-1   0-0   0-0  0  1  0  0  1  0   2</span>
+<span class="row-odd">Dayana Mendes F
+   20   1-3   0-1   0-0  5  2  0  0  0  4   2</span>
+<span class="row-even">Vivian Iwuchukwu F
+   15   1-2   0-0   3-4  5  0  1  0  2  3   5</span>
+<span class="row-odd">Sitaya Fagan F
+  Did not play</span>
+<span class="row-even">Yakiya Milton F
+  Did not play</span>
+<span class="row-odd">Brooklyn Shamblin G
+  Did not play</span>
+<span class="row-even">Kennedy Smith G
+  Did not play</span>
+<span class="row-odd">Rian Forestier G
+  Did not play</span>
+<span class="row-even">JuJu Watkins G
+  Did not play</span>
 
 Maryland Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Isimenme Ozzy-Momodu F
-   27   4-6   0-0   2-2  9  1  0  1  2  3  10
-Addi Mack G
-   27  4-10   0-3   4-5  3  1  1  0  1  2  12
-Oluchi Okananwa G
-   26   2-8   0-1   3-4  7  1  0  0  5  3   7
-Yarden Garzon G
-   38   3-6   2-5   2-2  3  4  1  0  2  2  10
-Saylor Poffenbarger G
-   29  3-10   2-6   1-1  6  1  1  2  5  1   9
+<span class="row-even">Isimenme Ozzy-Momodu F
+   27   4-6   0-0   2-2  9  1  0  1  2  3  10</span>
+<span class="row-odd">Addi Mack G
+   27  4-10   0-3   4-5  3  1  1  0  1  2  12</span>
+<span class="row-even">Oluchi Okananwa G
+   26   2-8   0-1   3-4  7  1  0  0  5  3   7</span>
+<span class="row-odd">Yarden Garzon G
+   38   3-6   2-5   2-2  3  4  1  0  2  2  10</span>
+<span class="row-even">Saylor Poffenbarger G
+   29  3-10   2-6   1-1  6  1  1  2  5  1   9</span>
 Maryland Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Marya Boiko F
-   10   1-1   0-0   0-0  2  1  0  0  1  0   2
-Breanna Williams F
-    8   1-1   0-0   1-2  4  0  0  0  1  2   3
-Rainey Welson G
-    1   0-0   0-0   0-0  0  0  0  0  0  1   0
-Kyndal Walker G
-   26   0-4   0-1  9-10  2  3  0  0  1  4   9
-Mir McLean G
-    8   0-0   0-0   0-0  2  1  0  0  0  0   0
-Nicole Fritea F
-  Did not play
-Lea Bartelme G
-  Did not play
-Ava McKennie G
-  Did not play
-Bri McDaniel G
-  Did not play
-Kaylene Smikle G
-  Did not play
+<span class="row-even">Marya Boiko F
+   10   1-1   0-0   0-0  2  1  0  0  1  0   2</span>
+<span class="row-odd">Breanna Williams F
+    8   1-1   0-0   1-2  4  0  0  0  1  2   3</span>
+<span class="row-even">Rainey Welson G
+    1   0-0   0-0   0-0  0  0  0  0  0  1   0</span>
+<span class="row-odd">Kyndal Walker G
+   26   0-4   0-1  9-10  2  3  0  0  1  4   9</span>
+<span class="row-even">Mir McLean G
+    8   0-0   0-0   0-0  2  1  0  0  0  0   0</span>
+<span class="row-odd">Nicole Fritea F
+  Did not play</span>
+<span class="row-even">Lea Bartelme G
+  Did not play</span>
+<span class="row-odd">Ava McKennie G
+  Did not play</span>
+<span class="row-even">Bri McDaniel G
+  Did not play</span>
+<span class="row-odd">Kaylene Smikle G
+  Did not play</span>
 
 <a href="../schedule.html">Back to Schedule</a>
 <a href="../index.html">Back to Home</a>
