--- a/games/401825282.html
+++ b/games/401825282.html
@@ -28,6 +28,14 @@
         a {
             color: #90caf9;
         }
+        .row-even {
+            background: #252525;
+            display: block;
+        }
+        .row-odd {
+            background: transparent;
+            display: block;
+        }
     </style>
 </head>
 <body>
@@ -57,67 +65,67 @@ Team Stats:
 
 USC Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Vivian Iwuchukwu F
-   17   3-5   0-0   1-3  4  0  0  0  2  4   7
-Jazzy Davidson G
-   29  4-12   1-4   4-4  3  6  3  1  1  2  13
-Kennedy Smith G
-   24   2-4   0-0   0-1  3  6  2  2  0  3   4
-Malia Samuels G
-   25   1-4   1-3   0-0  2  6  2  0  3  2   3
-Kara Dunn G
-   32 12-17   4-6   1-1  5  0  1  0  0  1  29
+<span class="row-even">Vivian Iwuchukwu F
+   17   3-5   0-0   1-3  4  0  0  0  2  4   7</span>
+<span class="row-odd">Jazzy Davidson G
+   29  4-12   1-4   4-4  3  6  3  1  1  2  13</span>
+<span class="row-even">Kennedy Smith G
+   24   2-4   0-0   0-1  3  6  2  2  0  3   4</span>
+<span class="row-odd">Malia Samuels G
+   25   1-4   1-3   0-0  2  6  2  0  3  2   3</span>
+<span class="row-even">Kara Dunn G
+   32 12-17   4-6   1-1  5  0  1  0  0  1  29</span>
 USC Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Gerda Raulusaityte F
-    8   0-1   0-0   0-0  0  0  0  0  0  1   0
-Dayana Mendes F
-   16   1-6   0-3   3-6  4  1  0  0  2  0   5
-Laura Williams F
-   12   2-3   0-0   1-2  4  2  0  1  0  0   5
-Yakiya Milton F
-    7   0-2   0-0   0-0  4  0  0  0  2  4   0
-Brooklyn Shamblin G
-    3   0-0   0-0   0-0  0  1  1  0  0  0   0
-Rian Forestier G
-    4   1-3   0-2   0-0  0  0  0  0  0  0   2
-Londynn Jones G
-   23   4-7   1-2   6-6  1  3  1  0  2  2  15
-Sitaya Fagan F
-  Did not play
-JuJu Watkins G
-  Did not play
+<span class="row-even">Gerda Raulusaityte F
+    8   0-1   0-0   0-0  0  0  0  0  0  1   0</span>
+<span class="row-odd">Dayana Mendes F
+   16   1-6   0-3   3-6  4  1  0  0  2  0   5</span>
+<span class="row-even">Laura Williams F
+   12   2-3   0-0   1-2  4  2  0  1  0  0   5</span>
+<span class="row-odd">Yakiya Milton F
+    7   0-2   0-0   0-0  4  0  0  0  2  4   0</span>
+<span class="row-even">Brooklyn Shamblin G
+    3   0-0   0-0   0-0  0  1  1  0  0  0   0</span>
+<span class="row-odd">Rian Forestier G
+    4   1-3   0-2   0-0  0  0  0  0  0  0   2</span>
+<span class="row-even">Londynn Jones G
+   23   4-7   1-2   6-6  1  3  1  0  2  2  15</span>
+<span class="row-odd">Sitaya Fagan F
+  Did not play</span>
+<span class="row-even">JuJu Watkins G
+  Did not play</span>
 
 Purdue Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Kendall Puryear F
-   12   0-1   0-0   1-2  1  1  0  0  3  3   1
-Nya Smith G
-   28   2-6   0-3   0-0  1  0  0  0  3  4   4
-McKenna Layden G
-    7   0-0   0-0   0-0  0  2  0  0  0  1   0
-Tara Daye G
-   34  7-13   3-3   4-5 10  2  3  0  5  5  21
-Madison Layden-Zay G
-   34   0-5   0-2   0-0  1  6  0  2  4  2   0
+<span class="row-even">Kendall Puryear F
+   12   0-1   0-0   1-2  1  1  0  0  3  3   1</span>
+<span class="row-odd">Nya Smith G
+   28   2-6   0-3   0-0  1  0  0  0  3  4   4</span>
+<span class="row-even">McKenna Layden G
+    7   0-0   0-0   0-0  0  2  0  0  0  1   0</span>
+<span class="row-odd">Tara Daye G
+   34  7-13   3-3   4-5 10  2  3  0  5  5  21</span>
+<span class="row-even">Madison Layden-Zay G
+   34   0-5   0-2   0-0  1  6  0  2  4  2   0</span>
 Purdue Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Avery Gordon F
-   17   5-7   0-0   0-0  6  1  1  1  1  2  10
-Lana McCarthy F
-    8   1-2   0-0   2-2  5  0  0  1  1  5   4
-Saige Stahl F
-    7   0-1   0-0   2-2  4  1  0  0  0  0   2
-Hila Karsh G
-   22   0-6   0-2   0-0  4  1  0  0  1  0   0
-Kiki Smith G
-   31  5-13   3-6   2-4  2  1  1  0  2  2  15
-Carley Barrett G
-  Did not play
-Taylor Henderson G
-  Did not play
-Taylor Feldman G
-  Did not play
+<span class="row-even">Avery Gordon F
+   17   5-7   0-0   0-0  6  1  1  1  1  2  10</span>
+<span class="row-odd">Lana McCarthy F
+    8   1-2   0-0   2-2  5  0  0  1  1  5   4</span>
+<span class="row-even">Saige Stahl F
+    7   0-1   0-0   2-2  4  1  0  0  0  0   2</span>
+<span class="row-odd">Hila Karsh G
+   22   0-6   0-2   0-0  4  1  0  0  1  0   0</span>
+<span class="row-even">Kiki Smith G
+   31  5-13   3-6   2-4  2  1  1  0  2  2  15</span>
+<span class="row-odd">Carley Barrett G
+  Did not play</span>
+<span class="row-even">Taylor Henderson G
+  Did not play</span>
+<span class="row-odd">Taylor Feldman G
+  Did not play</span>
 
 <a href="../schedule.html">Back to Schedule</a>
 <a href="../index.html">Back to Home</a>
