--- a/games/401825292.html
+++ b/games/401825292.html
@@ -28,6 +28,14 @@
         a {
             color: #90caf9;
         }
+        .row-even {
+            background: #252525;
+            display: block;
+        }
+        .row-odd {
+            background: transparent;
+            display: block;
+        }
     </style>
 </head>
 <body>
@@ -57,71 +65,71 @@ Team Stats:
 
 USC Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Vivian Iwuchukwu F
-   16   0-4   0-0   2-2  6  0  0  0  2  0   2
-Jazzy Davidson G
-   39  8-16   1-7   4-4  4  3  1  5  4  3  21
-Kennedy Smith G
-   29  7-13   1-4   0-0  6  4  4  1  7  5  15
-Malia Samuels G
-   24   0-1   0-0   0-0  5  4  1  0  3  3   0
-Kara Dunn G
-   40 10-18   3-8   0-0  6  1  3  2  4  2  23
+<span class="row-even">Vivian Iwuchukwu F
+   16   0-4   0-0   2-2  6  0  0  0  2  0   2</span>
+<span class="row-odd">Jazzy Davidson G
+   39  8-16   1-7   4-4  4  3  1  5  4  3  21</span>
+<span class="row-even">Kennedy Smith G
+   29  7-13   1-4   0-0  6  4  4  1  7  5  15</span>
+<span class="row-odd">Malia Samuels G
+   24   0-1   0-0   0-0  5  4  1  0  3  3   0</span>
+<span class="row-even">Kara Dunn G
+   40 10-18   3-8   0-0  6  1  3  2  4  2  23</span>
 USC Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Gerda Raulusaityte F
-   10   0-0   0-0   0-0  1  2  0  0  1  1   0
-Dayana Mendes F
-    7   0-0   0-0   0-0  6  1  0  0  2  4   0
-Laura Williams F
-   14   0-1   0-0   0-0  3  0  0  3  0  2   0
-Londynn Jones G
-   21   2-4   2-3   1-2  2  2  0  0  1  2   7
-Sitaya Fagan F
-  Did not play
-Yakiya Milton F
-  Did not play
-Brooklyn Shamblin G
-  Did not play
-Rian Forestier G
-  Did not play
-JuJu Watkins G
-  Did not play
+<span class="row-even">Gerda Raulusaityte F
+   10   0-0   0-0   0-0  1  2  0  0  1  1   0</span>
+<span class="row-odd">Dayana Mendes F
+    7   0-0   0-0   0-0  6  1  0  0  2  4   0</span>
+<span class="row-even">Laura Williams F
+   14   0-1   0-0   0-0  3  0  0  3  0  2   0</span>
+<span class="row-odd">Londynn Jones G
+   21   2-4   2-3   1-2  2  2  0  0  1  2   7</span>
+<span class="row-even">Sitaya Fagan F
+  Did not play</span>
+<span class="row-odd">Yakiya Milton F
+  Did not play</span>
+<span class="row-even">Brooklyn Shamblin G
+  Did not play</span>
+<span class="row-odd">Rian Forestier G
+  Did not play</span>
+<span class="row-even">JuJu Watkins G
+  Did not play</span>
 
 Michigan St Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Grace VanSlooten F
-   35  5-14   0-0   6-7  9  3  3  1  2  1  16
-Inés Sotelo C
-   36  5-10   1-3   1-1  7  2  3  2  3  3  12
-Rashunda Jones G
-   36  5-13   1-2   5-8  2  2  2  0  3  2  16
-Kennedy Blair G
-   33  8-15   0-2   5-6  6  2  5  0  3  3  21
-Jalyn Brown G
-   20  2-11   1-2   2-2  3  2  0  0  1  4   7
+<span class="row-even">Grace VanSlooten F
+   35  5-14   0-0   6-7  9  3  3  1  2  1  16</span>
+<span class="row-odd">Inés Sotelo C
+   36  5-10   1-3   1-1  7  2  3  2  3  3  12</span>
+<span class="row-even">Rashunda Jones G
+   36  5-13   1-2   5-8  2  2  2  0  3  2  16</span>
+<span class="row-odd">Kennedy Blair G
+   33  8-15   0-2   5-6  6  2  5  0  3  3  21</span>
+<span class="row-even">Jalyn Brown G
+   20  2-11   1-2   2-2  3  2  0  0  1  4   7</span>
 Michigan St Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Juliann Woodard F
-    6   0-1   0-1   0-0  0  0  0  0  0  0   0
-Sara Sambolic G
-    3   0-0   0-0   0-0  1  0  0  0  0  0   0
-Emma Shumate G
-   31   1-4   0-3   0-0  2  1  1  2  0  2   2
-Marah Dykstra F
-  Did not play
-Isaline Alexander F
-  Did not play
-Anna Terrian G
-  Did not play
-Amy Terrian G
-  Did not play
-Jordan Ode G
-  Did not play
-Theryn Hallock G
-  Did not play
-Abbey Kimball G
-  Did not play
+<span class="row-even">Juliann Woodard F
+    6   0-1   0-1   0-0  0  0  0  0  0  0   0</span>
+<span class="row-odd">Sara Sambolic G
+    3   0-0   0-0   0-0  1  0  0  0  0  0   0</span>
+<span class="row-even">Emma Shumate G
+   31   1-4   0-3   0-0  2  1  1  2  0  2   2</span>
+<span class="row-odd">Marah Dykstra F
+  Did not play</span>
+<span class="row-even">Isaline Alexander F
+  Did not play</span>
+<span class="row-odd">Anna Terrian G
+  Did not play</span>
+<span class="row-even">Amy Terrian G
+  Did not play</span>
+<span class="row-odd">Jordan Ode G
+  Did not play</span>
+<span class="row-even">Theryn Hallock G
+  Did not play</span>
+<span class="row-odd">Abbey Kimball G
+  Did not play</span>
 
 <a href="../schedule.html">Back to Schedule</a>
 <a href="../index.html">Back to Home</a>
