--- a/games/401825317.html
+++ b/games/401825317.html
@@ -28,6 +28,14 @@
         a {
             color: #90caf9;
         }
+        .row-even {
+            background: #252525;
+            display: block;
+        }
+        .row-odd {
+            background: transparent;
+            display: block;
+        }
     </style>
 </head>
 <body>
@@ -57,67 +65,67 @@ Team Stats:
 
 USC Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Vivian Iwuchukwu F
-   12   0-1   0-0   1-4  2  0  0  0  1  4   1
-Jazzy Davidson G
-   30  6-17   0-5   4-4  9  5  3  1  6  1  16
-Kennedy Smith G
-   27   4-8   2-6   1-2  0  4  1  1  1  0  11
-Kara Dunn G
-   29  7-15   2-7   2-2  6  2  0  0  2  2  18
-Londynn Jones G
-   25   2-9   2-8   0-0  4  3  0  0  3  1   6
+<span class="row-even">Vivian Iwuchukwu F
+   12   0-1   0-0   1-4  2  0  0  0  1  4   1</span>
+<span class="row-odd">Jazzy Davidson G
+   30  6-17   0-5   4-4  9  5  3  1  6  1  16</span>
+<span class="row-even">Kennedy Smith G
+   27   4-8   2-6   1-2  0  4  1  1  1  0  11</span>
+<span class="row-odd">Kara Dunn G
+   29  7-15   2-7   2-2  6  2  0  0  2  2  18</span>
+<span class="row-even">Londynn Jones G
+   25   2-9   2-8   0-0  4  3  0  0  3  1   6</span>
 USC Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Gerda Raulusaityte F
-   10   0-0   0-0   0-0  2  0  1  1  2  3   0
-Dayana Mendes F
-   18   1-6   0-2   0-0  6  0  1  1  0  0   2
-Laura Williams F
-   15   2-4   0-0   0-4 11  0  1  1  1  0   4
-Yakiya Milton F
-    7   0-2   0-0   3-4  5  1  0  0  0  1   3
-Brooklyn Shamblin G
-    5   0-0   0-0   0-0  1  1  0  0  0  0   0
-Rian Forestier G
-    5   1-3   1-3   0-0  0  0  0  0  1  0   3
-Malia Samuels G
-   17   2-4   1-2   2-2  4  3  1  0  2  1   7
-Sitaya Fagan F
-  Did not play
-JuJu Watkins G
-  Did not play
+<span class="row-even">Gerda Raulusaityte F
+   10   0-0   0-0   0-0  2  0  1  1  2  3   0</span>
+<span class="row-odd">Dayana Mendes F
+   18   1-6   0-2   0-0  6  0  1  1  0  0   2</span>
+<span class="row-even">Laura Williams F
+   15   2-4   0-0   0-4 11  0  1  1  1  0   4</span>
+<span class="row-odd">Yakiya Milton F
+    7   0-2   0-0   3-4  5  1  0  0  0  1   3</span>
+<span class="row-even">Brooklyn Shamblin G
+    5   0-0   0-0   0-0  1  1  0  0  0  0   0</span>
+<span class="row-odd">Rian Forestier G
+    5   1-3   1-3   0-0  0  0  0  0  1  0   3</span>
+<span class="row-even">Malia Samuels G
+   17   2-4   1-2   2-2  4  3  1  0  2  1   7</span>
+<span class="row-odd">Sitaya Fagan F
+  Did not play</span>
+<span class="row-even">JuJu Watkins G
+  Did not play</span>
 
 Rutgers Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Zachara Perkins F
-   27  4-14   1-4   3-4  4  1  2  0  1  4  12
-Lauryn Swann G
-   27  2-10   0-5   0-0  3  1  4  0  4  3   4
-Antonia Bates G
-   37   0-1   0-0   0-0  7  2  2  1  2  4   0
-Imani Lester G
-   20  4-15   0-2   3-4  6  0  1  0  1  0  11
-Kaylah Ivey G
-   38   2-7   2-6   0-0  0  7  0  1  2  3   6
+<span class="row-even">Zachara Perkins F
+   27  4-14   1-4   3-4  4  1  2  0  1  4  12</span>
+<span class="row-odd">Lauryn Swann G
+   27  2-10   0-5   0-0  3  1  4  0  4  3   4</span>
+<span class="row-even">Antonia Bates G
+   37   0-1   0-0   0-0  7  2  2  1  2  4   0</span>
+<span class="row-odd">Imani Lester G
+   20  4-15   0-2   3-4  6  0  1  0  1  0  11</span>
+<span class="row-even">Kaylah Ivey G
+   38   2-7   2-6   0-0  0  7  0  1  2  3   6</span>
 Rutgers Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Precious Gem Wheeler F
-   12   0-1   0-0   0-0  0  0  0  1  1  4   0
-Janae Walker F
-   10   0-0   0-0   0-0  2  0  0  0  5  1   0
-Deja Young G
-    4   0-0   0-0   0-0  2  0  0  0  0  0   0
-Kennedy Brandt G
-    4   0-0   0-0   0-0  1  0  0  0  0  0   0
-Faith Blackstone G
-   21  2-10   0-2   2-2  1  0  1  1  0  3   6
-Yacine Ndiaye F
-  Did not play
-Nene Ndiaye F
-  Did not play
-Makylah Moore G
-  Did not play
+<span class="row-even">Precious Gem Wheeler F
+   12   0-1   0-0   0-0  0  0  0  1  1  4   0</span>
+<span class="row-odd">Janae Walker F
+   10   0-0   0-0   0-0  2  0  0  0  5  1   0</span>
+<span class="row-even">Deja Young G
+    4   0-0   0-0   0-0  2  0  0  0  0  0   0</span>
+<span class="row-odd">Kennedy Brandt G
+    4   0-0   0-0   0-0  1  0  0  0  0  0   0</span>
+<span class="row-even">Faith Blackstone G
+   21  2-10   0-2   2-2  1  0  1  1  0  3   6</span>
+<span class="row-odd">Yacine Ndiaye F
+  Did not play</span>
+<span class="row-even">Nene Ndiaye F
+  Did not play</span>
+<span class="row-odd">Makylah Moore G
+  Did not play</span>
 
 <a href="../schedule.html">Back to Schedule</a>
 <a href="../index.html">Back to Home</a>
