--- a/games/401825930.html
+++ b/games/401825930.html
@@ -28,6 +28,14 @@
         a {
             color: #90caf9;
         }
+        .row-even {
+            background: #252525;
+            display: block;
+        }
+        .row-odd {
+            background: transparent;
+            display: block;
+        }
     </style>
 </head>
 <body>
@@ -57,63 +65,63 @@ Team Stats:
 
 USC Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Vivian Iwuchukwu F
-   13   4-4   0-0   1-1  0  2  0  0  1  0   9
-Jazzy Davidson G
-   31  5-13   3-6   5-8  4  5  2  3  2  1  18
-Kennedy Smith G
-   32  4-10   1-4   0-0  3  7  3  1  1  3   9
-Kara Dunn G
-   29  8-10   3-4   0-0  3  1  2  2  2  4  19
-Londynn Jones G
-   26   2-8   0-4   2-2  1  5  0  0  0  2   6
+<span class="row-even">Vivian Iwuchukwu F
+   13   4-4   0-0   1-1  0  2  0  0  1  0   9</span>
+<span class="row-odd">Jazzy Davidson G
+   31  5-13   3-6   5-8  4  5  2  3  2  1  18</span>
+<span class="row-even">Kennedy Smith G
+   32  4-10   1-4   0-0  3  7  3  1  1  3   9</span>
+<span class="row-odd">Kara Dunn G
+   29  8-10   3-4   0-0  3  1  2  2  2  4  19</span>
+<span class="row-even">Londynn Jones G
+   26   2-8   0-4   2-2  1  5  0  0  0  2   6</span>
 USC Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Gerda Raulusaityte F
-   13   3-4   0-0   1-2  3  1  1  1  0  2   7
-Dayana Mendes F
-   19   1-2   1-2   1-2  4  2  2  0  0  1   4
-Laura Williams F
-   11   1-1   0-0   0-0  1  1  0  1  2  3   2
-Yakiya Milton F
-    7   1-5   0-0   0-0  2  0  0  0  0  0   2
-Brooklyn Shamblin G
-    7   0-0   0-0   0-0  2  1  0  0  1  2   0
-Rian Forestier G
-   12   2-5   2-5   0-0  4  2  0  0  0  0   6
-JuJu Watkins G
-  Did not play
-Malia Samuels G
-  Did not play
+<span class="row-even">Gerda Raulusaityte F
+   13   3-4   0-0   1-2  3  1  1  1  0  2   7</span>
+<span class="row-odd">Dayana Mendes F
+   19   1-2   1-2   1-2  4  2  2  0  0  1   4</span>
+<span class="row-even">Laura Williams F
+   11   1-1   0-0   0-0  1  1  0  1  2  3   2</span>
+<span class="row-odd">Yakiya Milton F
+    7   1-5   0-0   0-0  2  0  0  0  0  0   2</span>
+<span class="row-even">Brooklyn Shamblin G
+    7   0-0   0-0   0-0  2  1  0  0  1  2   0</span>
+<span class="row-odd">Rian Forestier G
+   12   2-5   2-5   0-0  4  2  0  0  0  0   6</span>
+<span class="row-even">JuJu Watkins G
+  Did not play</span>
+<span class="row-odd">Malia Samuels G
+  Did not play</span>
 
 Pepperdine Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Shorna Preston F
-   19   2-6   0-1   1-2  4  2  0  1  1  4   5
-Elli Guiney G
-   33   3-9   0-2   6-7  3  6  0  0  1  3  12
-Taija Sta. Maria G
-   31   1-6   0-1   2-2  3  2  0  0  2  1   4
-Lina Falk G
-   21   2-6   0-1   0-0  2  1  1  0  3  2   4
-Meghan Fiso G
-   24   5-9   1-3   0-0  5  0  0  0  1  0  11
+<span class="row-even">Shorna Preston F
+   19   2-6   0-1   1-2  4  2  0  1  1  4   5</span>
+<span class="row-odd">Elli Guiney G
+   33   3-9   0-2   6-7  3  6  0  0  1  3  12</span>
+<span class="row-even">Taija Sta. Maria G
+   31   1-6   0-1   2-2  3  2  0  0  2  1   4</span>
+<span class="row-odd">Lina Falk G
+   21   2-6   0-1   0-0  2  1  1  0  3  2   4</span>
+<span class="row-even">Meghan Fiso G
+   24   5-9   1-3   0-0  5  0  0  0  1  0  11</span>
 Pepperdine Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Zoe Shanahan F
-    3   0-0   0-0   0-0  0  1  0  0  2  1   0
-Irune Orio F
-   11   1-3   0-1   2-2  2  0  0  0  1  1   4
-Seleh Harmon G
-   20   2-6   0-3   0-0  1  0  0  0  2  0   4
-Bella Green G
-   22   1-5   0-0   0-0  9  1  1  1  3  2   2
-Ivory Finley G
-   16   1-3   0-1   4-4  0  0  0  1  0  1   6
-Quinn VanSickle G
-  Did not play
-Ilinca Belegante G
-  Did not play
+<span class="row-even">Zoe Shanahan F
+    3   0-0   0-0   0-0  0  1  0  0  2  1   0</span>
+<span class="row-odd">Irune Orio F
+   11   1-3   0-1   2-2  2  0  0  0  1  1   4</span>
+<span class="row-even">Seleh Harmon G
+   20   2-6   0-3   0-0  1  0  0  0  2  0   4</span>
+<span class="row-odd">Bella Green G
+   22   1-5   0-0   0-0  9  1  1  1  3  2   2</span>
+<span class="row-even">Ivory Finley G
+   16   1-3   0-1   4-4  0  0  0  1  0  1   6</span>
+<span class="row-odd">Quinn VanSickle G
+  Did not play</span>
+<span class="row-even">Ilinca Belegante G
+  Did not play</span>
 
 <a href="../schedule.html">Back to Schedule</a>
 <a href="../index.html">Back to Home</a>
