--- a/games/401826078.html
+++ b/games/401826078.html
@@ -28,6 +28,14 @@
         a {
             color: #90caf9;
         }
+        .row-even {
+            background: #252525;
+            display: block;
+        }
+        .row-odd {
+            background: transparent;
+            display: block;
+        }
     </style>
 </head>
 <body>
@@ -57,69 +65,69 @@ Team Stats:
 
 USC Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Gerda Raulusaityte F
-   12   0-3   0-0   0-0  2  1  0  0  1  0   0
-Jazzy Davidson G
-   33  9-16   0-4   1-3  7  5  3  1  5  1  19
-Kennedy Smith G
-   36  5-14   3-6   0-0  6  3  2  1  1  2  13
-Malia Samuels G
-   19   1-3   0-2   0-2  1  1  3  0  1  1   2
-Kara Dunn G
-   23   4-9   1-3   1-1  7  2  2  1  2  4  10
+<span class="row-even">Gerda Raulusaityte F
+   12   0-3   0-0   0-0  2  1  0  0  1  0   0</span>
+<span class="row-odd">Jazzy Davidson G
+   33  9-16   0-4   1-3  7  5  3  1  5  1  19</span>
+<span class="row-even">Kennedy Smith G
+   36  5-14   3-6   0-0  6  3  2  1  1  2  13</span>
+<span class="row-odd">Malia Samuels G
+   19   1-3   0-2   0-2  1  1  3  0  1  1   2</span>
+<span class="row-even">Kara Dunn G
+   23   4-9   1-3   1-1  7  2  2  1  2  4  10</span>
 USC Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Dayana Mendes F
-   16   2-5   0-1   2-2  5  2  1  0  2  2   6
-Laura Williams F
-    7   0-0   0-0   0-0  1  0  0  0  1  1   0
-Vivian Iwuchukwu F
-   12   3-4   0-0   1-2  2  0  0  0  1  2   7
-Yakiya Milton F
-   12   2-9   0-0   2-2 12  1  2  1  2  2   6
-Brooklyn Shamblin G
-    3   0-0   0-0   0-0  0  0  0  0  0  1   0
-Rian Forestier G
-    4   1-2   1-2   0-0  0  0  0  0  0  0   3
-Londynn Jones G
-   23  4-12   4-7   0-0  3  1  0  0  2  2  12
-JuJu Watkins G
-  Did not play
+<span class="row-even">Dayana Mendes F
+   16   2-5   0-1   2-2  5  2  1  0  2  2   6</span>
+<span class="row-odd">Laura Williams F
+    7   0-0   0-0   0-0  1  0  0  0  1  1   0</span>
+<span class="row-even">Vivian Iwuchukwu F
+   12   3-4   0-0   1-2  2  0  0  0  1  2   7</span>
+<span class="row-odd">Yakiya Milton F
+   12   2-9   0-0   2-2 12  1  2  1  2  2   6</span>
+<span class="row-even">Brooklyn Shamblin G
+    3   0-0   0-0   0-0  0  0  0  0  0  1   0</span>
+<span class="row-odd">Rian Forestier G
+    4   1-2   1-2   0-0  0  0  0  0  0  0   3</span>
+<span class="row-even">Londynn Jones G
+   23  4-12   4-7   0-0  3  1  0  0  2  2  12</span>
+<span class="row-odd">JuJu Watkins G
+  Did not play</span>
 
 Portland Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Lainey Spear F
-   31  5-11   0-2   1-2  6  1  3  0  0  3  11
-Julia Dalan C
-   27   1-7   0-0   1-1  4  2  1  8  4  1   3
-Dyani Ananiev G
-   26  2-10   0-3   1-1  4  3  1  0  2  4   5
-Natalie Fraley G
-   26   1-4   1-3   1-2  3  3  2  0  2  4   4
-Florence Dallow G
-   26   3-9   0-2   3-4  8  3  0  0  6  4   9
+<span class="row-even">Lainey Spear F
+   31  5-11   0-2   1-2  6  1  3  0  0  3  11</span>
+<span class="row-odd">Julia Dalan C
+   27   1-7   0-0   1-1  4  2  1  8  4  1   3</span>
+<span class="row-even">Dyani Ananiev G
+   26  2-10   0-3   1-1  4  3  1  0  2  4   5</span>
+<span class="row-odd">Natalie Fraley G
+   26   1-4   1-3   1-2  3  3  2  0  2  4   4</span>
+<span class="row-even">Florence Dallow G
+   26   3-9   0-2   3-4  8  3  0  0  6  4   9</span>
 Portland Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Ella Zimmerman F
-    7   1-2   0-0   0-1  0  0  0  0  2  0   2
-Jada Kennedy C
-    6   0-0   0-0   0-0  1  0  0  1  0  2   0
-Brynn Smith G
-   14   3-5   3-3   0-0  2  0  0  0  3  0   9
-Caitlin Monahan G
-    2   0-1   0-1   0-0  0  0  1  0  0  1   0
-Tiffany Barbosa G
-   18   1-4   0-2   1-4  3  1  2  0  3  1   3
-Nicole Anderson G
-   17   2-6   1-4   0-0  2  1  0  0  3  0   5
-Goundoba Diakite Bayo F
-  Did not play
-Aubrey Herrin G
-  Did not play
-Camille Dake G
-  Did not play
-Rhyan Mogel G
-  Did not play
+<span class="row-even">Ella Zimmerman F
+    7   1-2   0-0   0-1  0  0  0  0  2  0   2</span>
+<span class="row-odd">Jada Kennedy C
+    6   0-0   0-0   0-0  1  0  0  1  0  2   0</span>
+<span class="row-even">Brynn Smith G
+   14   3-5   3-3   0-0  2  0  0  0  3  0   9</span>
+<span class="row-odd">Caitlin Monahan G
+    2   0-1   0-1   0-0  0  0  1  0  0  1   0</span>
+<span class="row-even">Tiffany Barbosa G
+   18   1-4   0-2   1-4  3  1  2  0  3  1   3</span>
+<span class="row-odd">Nicole Anderson G
+   17   2-6   1-4   0-0  2  1  0  0  3  0   5</span>
+<span class="row-even">Goundoba Diakite Bayo F
+  Did not play</span>
+<span class="row-odd">Aubrey Herrin G
+  Did not play</span>
+<span class="row-even">Camille Dake G
+  Did not play</span>
+<span class="row-odd">Rhyan Mogel G
+  Did not play</span>
 
 <a href="../schedule.html">Back to Schedule</a>
 <a href="../index.html">Back to Home</a>
