--- a/games/401826672.html
+++ b/games/401826672.html
@@ -28,6 +28,14 @@
         a {
             color: #90caf9;
         }
+        .row-even {
+            background: #252525;
+            display: block;
+        }
+        .row-odd {
+            background: transparent;
+            display: block;
+        }
     </style>
 </head>
 <body>
@@ -57,65 +65,65 @@ Team Stats:
 
 USC Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Vivian Iwuchukwu F
-   13   2-3   0-0   1-4  4  0  1  0  0  1   5
-Jazzy Davidson G
-   30  4-16   0-7   6-7  5  4  1  1  3  1  14
-Kennedy Smith G
-   27  2-10   1-6   6-7  4  2  2  1  0  1  11
-Malia Samuels G
-   24   1-2   1-1   1-2  3  4  2  0  2  1   4
-Kara Dunn G
-   24   4-9   2-3   2-4  8  1  2  0  0  1  12
+<span class="row-even">Vivian Iwuchukwu F
+   13   2-3   0-0   1-4  4  0  1  0  0  1   5</span>
+<span class="row-odd">Jazzy Davidson G
+   30  4-16   0-7   6-7  5  4  1  1  3  1  14</span>
+<span class="row-even">Kennedy Smith G
+   27  2-10   1-6   6-7  4  2  2  1  0  1  11</span>
+<span class="row-odd">Malia Samuels G
+   24   1-2   1-1   1-2  3  4  2  0  2  1   4</span>
+<span class="row-even">Kara Dunn G
+   24   4-9   2-3   2-4  8  1  2  0  0  1  12</span>
 USC Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Gerda Raulusaityte F
-   14   1-3   0-0   1-4  9  1  0  1  0  1   3
-Dayana Mendes F
-   18   3-5   3-3   0-0  5  1  1  0  1  0   9
-Laura Williams F
-   10   1-3   0-0   2-5  3  0  0  1  1  2   4
-Yakiya Milton F
-    9   2-3   0-0   2-2  2  0  0  0  0  2   6
-Brooklyn Shamblin G
-    4   0-0   0-0   0-0  1  2  0  0  1  1   0
-Rian Forestier G
-    8   1-1   1-1   0-0  0  1  0  0  1  0   3
-Londynn Jones G
-   19  6-11   0-3   4-4  3  3  2  0  1  1  16
-JuJu Watkins G
-  Did not play
+<span class="row-even">Gerda Raulusaityte F
+   14   1-3   0-0   1-4  9  1  0  1  0  1   3</span>
+<span class="row-odd">Dayana Mendes F
+   18   3-5   3-3   0-0  5  1  1  0  1  0   9</span>
+<span class="row-even">Laura Williams F
+   10   1-3   0-0   2-5  3  0  0  1  1  2   4</span>
+<span class="row-odd">Yakiya Milton F
+    9   2-3   0-0   2-2  2  0  0  0  0  2   6</span>
+<span class="row-even">Brooklyn Shamblin G
+    4   0-0   0-0   0-0  1  2  0  0  1  1   0</span>
+<span class="row-odd">Rian Forestier G
+    8   1-1   1-1   0-0  0  1  0  0  1  0   3</span>
+<span class="row-even">Londynn Jones G
+   19  6-11   0-3   4-4  3  3  2  0  1  1  16</span>
+<span class="row-odd">JuJu Watkins G
+  Did not play</span>
 
 New Mexico St Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Lucia Yenes F
-   33 11-19   2-3   3-3  5  1  2  3  4  2  27
-Keira Hudson G
-   22   0-5   0-2   0-0  1  1  1  0  5  2   0
-Anna Csenyi G
-   23   1-3   0-1   0-0  0  0  0  0  2  2   2
-Loes Rozing G
-   16   0-1   0-0   0-0  1  2  2  0  2  4   0
-Imani Warren G
-   18  5-11   0-0   1-3  3  2  0  0  2  4  11
+<span class="row-even">Lucia Yenes F
+   33 11-19   2-3   3-3  5  1  2  3  4  2  27</span>
+<span class="row-odd">Keira Hudson G
+   22   0-5   0-2   0-0  1  1  1  0  5  2   0</span>
+<span class="row-even">Anna Csenyi G
+   23   1-3   0-1   0-0  0  0  0  0  2  2   2</span>
+<span class="row-odd">Loes Rozing G
+   16   0-1   0-0   0-0  1  2  2  0  2  4   0</span>
+<span class="row-even">Imani Warren G
+   18  5-11   0-0   1-3  3  2  0  0  2  4  11</span>
 New Mexico St Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Lucia Lara F
-   24   1-3   0-0   0-2  2  1  1  0  0  0   2
-Iyana Beh F
-   12   1-2   0-0   0-0  3  0  1  1  1  3   2
-Morane Dossou F
-    6   0-1   0-0   0-0  3  0  0  0  1  1   0
-Marta Guilera F
-    9   1-3   0-0   0-0  1  2  0  0  0  1   2
-Nikki Stanic G
-    7   0-2   0-1   0-0  0  0  0  0  0  3   0
-DeAvion Wilson G
-    9   1-1   0-0   0-0  0  0  1  0  2  3   2
-Emma Christiano G
-   21   0-1   0-0   0-0  1  4  0  0  1  4   0
-Senoj Jones F
-  Did not play
+<span class="row-even">Lucia Lara F
+   24   1-3   0-0   0-2  2  1  1  0  0  0   2</span>
+<span class="row-odd">Iyana Beh F
+   12   1-2   0-0   0-0  3  0  1  1  1  3   2</span>
+<span class="row-even">Morane Dossou F
+    6   0-1   0-0   0-0  3  0  0  0  1  1   0</span>
+<span class="row-odd">Marta Guilera F
+    9   1-3   0-0   0-0  1  2  0  0  0  1   2</span>
+<span class="row-even">Nikki Stanic G
+    7   0-2   0-1   0-0  0  0  0  0  0  3   0</span>
+<span class="row-odd">DeAvion Wilson G
+    9   1-1   0-0   0-0  0  0  1  0  2  3   2</span>
+<span class="row-even">Emma Christiano G
+   21   0-1   0-0   0-0  1  4  0  0  1  4   0</span>
+<span class="row-odd">Senoj Jones F
+  Did not play</span>
 
 <a href="../schedule.html">Back to Schedule</a>
 <a href="../index.html">Back to Home</a>
