--- a/games/401826673.html
+++ b/games/401826673.html
@@ -28,6 +28,14 @@
         a {
             color: #90caf9;
         }
+        .row-even {
+            background: #252525;
+            display: block;
+        }
+        .row-odd {
+            background: transparent;
+            display: block;
+        }
     </style>
 </head>
 <body>
@@ -57,63 +65,63 @@ Team Stats:
 
 USC Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Vivian Iwuchukwu F
-   16   5-6   0-0   1-1  3  1  2  0  1  1  11
-Jazzy Davidson G
-   26  9-14   2-5   0-0 16  4  0  2  2  2  20
-Kennedy Smith G
-   26  3-10   1-3   2-2  5  5  2  2  1  3   9
-Malia Samuels G
-   15   0-4   0-1   0-0  1  3  0  0  0  2   0
-Kara Dunn G
-   26   2-7   0-3   1-1  5  2  1  1  2  2   5
+<span class="row-even">Vivian Iwuchukwu F
+   16   5-6   0-0   1-1  3  1  2  0  1  1  11</span>
+<span class="row-odd">Jazzy Davidson G
+   26  9-14   2-5   0-0 16  4  0  2  2  2  20</span>
+<span class="row-even">Kennedy Smith G
+   26  3-10   1-3   2-2  5  5  2  2  1  3   9</span>
+<span class="row-odd">Malia Samuels G
+   15   0-4   0-1   0-0  1  3  0  0  0  2   0</span>
+<span class="row-even">Kara Dunn G
+   26   2-7   0-3   1-1  5  2  1  1  2  2   5</span>
 USC Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Gerda Raulusaityte F
-   12   2-3   0-0   1-2  4  2  1  1  1  3   5
-Dayana Mendes F
-   17   1-1   0-0   0-0  1  1  0  2  1  1   2
-Laura Williams F
-   13   0-3   0-0   0-0  3  0  0  4  1  0   0
-Yakiya Milton F
-   10   2-3   0-0   3-5  6  0  0  3  1  4   7
-Brooklyn Shamblin G
-    4   0-0   0-0   0-0  1  0  0  0  0  0   0
-Rian Forestier G
-   11   2-3   1-2   1-2  1  1  1  0  0  1   6
-Londynn Jones G
-   24   7-9   4-4   2-2  0  2  0  0  3  4  20
-JuJu Watkins G
-  Did not play
+<span class="row-even">Gerda Raulusaityte F
+   12   2-3   0-0   1-2  4  2  1  1  1  3   5</span>
+<span class="row-odd">Dayana Mendes F
+   17   1-1   0-0   0-0  1  1  0  2  1  1   2</span>
+<span class="row-even">Laura Williams F
+   13   0-3   0-0   0-0  3  0  0  4  1  0   0</span>
+<span class="row-odd">Yakiya Milton F
+   10   2-3   0-0   3-5  6  0  0  3  1  4   7</span>
+<span class="row-even">Brooklyn Shamblin G
+    4   0-0   0-0   0-0  1  0  0  0  0  0   0</span>
+<span class="row-odd">Rian Forestier G
+   11   2-3   1-2   1-2  1  1  1  0  0  1   6</span>
+<span class="row-even">Londynn Jones G
+   24   7-9   4-4   2-2  0  2  0  0  3  4  20</span>
+<span class="row-odd">JuJu Watkins G
+  Did not play</span>
 
 Tennessee Tech Starters:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-LaReesha Cawthorn F
-   27  1-10   0-1   2-7  9  0  1  0  2  3   4
-Chloe Larry G
-   28  4-15   2-8   2-4  6  1  2  0  0  2  12
-Amaya Thomas G
-   10   0-2   0-0   0-1  4  0  0  0  0  0   0
-Cam Mathews G
-   36  5-10   2-7   0-0  4  1  2  0  2  4  12
-Reghan Grimes G
-   31  1-11   1-3   4-4  2  4  3  0  3  2   7
+<span class="row-even">LaReesha Cawthorn F
+   27  1-10   0-1   2-7  9  0  1  0  2  3   4</span>
+<span class="row-odd">Chloe Larry G
+   28  4-15   2-8   2-4  6  1  2  0  0  2  12</span>
+<span class="row-even">Amaya Thomas G
+   10   0-2   0-0   0-1  4  0  0  0  0  0   0</span>
+<span class="row-odd">Cam Mathews G
+   36  5-10   2-7   0-0  4  1  2  0  2  4  12</span>
+<span class="row-even">Reghan Grimes G
+   31  1-11   1-3   4-4  2  4  3  0  3  2   7</span>
 Tennessee Tech Bench:
  MIN    FG   3PT    FT  R  A  S  B TO PF PTS
-Amaya Redd F
-   27  3-11   0-1   2-6  5  2  0  0  1  3   8
-Sofi Miller F
-    1   0-0   0-0   0-0  0  0  0  0  0  0   0
-Maddy Newman F
-   11   0-1   0-0   0-1  2  0  0  0  1  0   0
-Amelia Pfeiffer C
-    9   0-2   0-0   1-2  0  0  0  0  2  0   1
-Lyriq Mastin G
-   19   0-3   0-1   0-0  1  0  0  0  0  2   0
-Angelika Girgenson G
-    1   0-0   0-0   0-0  0  0  0  0  1  0   0
-Reagan Hurst G
-  Did not play
+<span class="row-even">Amaya Redd F
+   27  3-11   0-1   2-6  5  2  0  0  1  3   8</span>
+<span class="row-odd">Sofi Miller F
+    1   0-0   0-0   0-0  0  0  0  0  0  0   0</span>
+<span class="row-even">Maddy Newman F
+   11   0-1   0-0   0-1  2  0  0  0  1  0   0</span>
+<span class="row-odd">Amelia Pfeiffer C
+    9   0-2   0-0   1-2  0  0  0  0  2  0   1</span>
+<span class="row-even">Lyriq Mastin G
+   19   0-3   0-1   0-0  1  0  0  0  0  2   0</span>
+<span class="row-odd">Angelika Girgenson G
+    1   0-0   0-0   0-0  0  0  0  0  1  0   0</span>
+<span class="row-even">Reagan Hurst G
+  Did not play</span>
 
 <a href="../schedule.html">Back to Schedule</a>
 <a href="../index.html">Back to Home</a>
